--- a/src/content/docs/de/dashboard.mdx
+++ b/src/content/docs/de/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 Scribe for Meetings bietet ein webbasiertes Dashboard, das verschiedene Aufgaben der Meeting-, Konto- und Organisationsverwaltung erleichtert.
 Es ist zu beachten, dass der Funktionsumfang des Dashboards weitgehend davon abhängt, ob Sie ein Benutzer oder ein Administrator sind.
 
-## Meeting Management
+### Meeting Management
 
 Im Bereich "Meetings" werden alle vergangenen und aktuellen Meetings aufgelistet, die von Ihnen und/oder Ihrer Organisation organisiert wurden. Wenn Sie auf eine Besprechung klicken, öffnet sich eine Detailseite, auf der Sie Folgendes tun können
 * Hochladen einer neuen oder überarbeiteten Präsentation
@@ -18,25 +18,25 @@ Im Bereich "Meetings" werden alle vergangenen und aktuellen Meetings aufgelistet
 
 Wenn Sie auf den Link "Löschen" neben einem Meeting klicken, werden Sie um eine Bestätigung gebeten und das Meeting wird dann aus Ihrem Konto gelöscht.
 
-## Anwesenheitsstatistik (admin)
+### Anwesenheitsstatistik (admin)
 
 Der Bereich Anwesenheitsstatistiken zeigt Ihnen eine tägliche, wöchentliche, monatliche, jährliche und alle Zeiträume umfassende Zählung aller einzelnen Nutzer, die an Meetings mit Scribe for Meetings in Ihrer Organisation teilnehmen.
 
-## Meeting-Standardwerte (admin)
+### Meeting-Standardwerte (admin)
 
 Auf der Seite "Meeting Defaults" im Menü "Settings" können Sie globale Standardeinstellungen festlegen, die für alle Meetings gelten. Dazu gehören:
 * Sprache
 * Bevorzugte automatische Bildbeschreibung
 * Ob das Herunterladen von Folien erlaubt werden soll
 
-## Organisationsmanagement (admin)
+### Organisationsmanagement (admin)
 
 Wenn Sie auf die Schaltfläche "Organisation" klicken, wird ein Link "Mitglieder" angezeigt. Auf dieser Seite können Sie der Organisation Mitglieder hinzufügen und bestehende Mitglieder verwalten.
 
-### Hinzufügen von Mitgliedern
+#### Hinzufügen von Mitgliedern
 
 Um ein Mitglied hinzuzufügen, geben Sie einfach seine E-Mail-Adresse in das Feld "E-Mail-Adresse" ein, wählen Sie seine Rolle im Dropdown-Menü und klicken Sie dann auf die Schaltfläche "Hinzufügen".
 
-### Vorhandene Benutzer verwalten
+#### Vorhandene Benutzer verwalten
 
 Neben jedem Benutzer befinden sich zwei Schaltflächen. Mit der einen können Sie die Rolle des Benutzers ändern, mit der anderen können Sie ihn aus der Organisation löschen.
