--- a/src/content/docs/de/gettingconnected.mdx
+++ b/src/content/docs/de/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings bietet zwei schnelle, mühelose Möglichkeiten, eine Verbindung zu Ihrer barrierefreien Folienpräsentation herzustellen.
 
-## Verbindung über direkten Link
+### Verbindung über direkten Link
 
 Ähnlich wie ein Meeting-Link von Ihrer Telefonkonferenz-Plattform bietet Scribe for Meetings direkte Links für den Beitritt zu Ihrer barrierefreien Folienpräsentation. Wenn Sie einen solchen Link in Ihrer Meeting-Einladung oder im Meeting-Chat erhalten, können Sie ihn anklicken, um Scribe for Meetings sofort in Ihrem Webbrowser zu öffnen. Sobald Sie auf die Schaltfläche "Starten" klicken, kann eines von zwei Dingen passieren.
 1. Sie hören einen kurzen Signalton, gefolgt von einer Nachricht, die Sie darüber informiert, dass Scribe for Meetings den Zugang zu den Inhalten in diesem Meeting vorbereitet.
@@ -19,7 +19,7 @@ Scribe for Meetings bietet zwei schnelle, mühelose Möglichkeiten, eine Verbind
 
 In jedem Fall ist Scribe for Meetings jetzt bereit, mit der Präsentation der Folien zu beginnen.
 
-## Beitritt über Meeting Link
+### Beitritt über Meeting Link
 
 Wenn Sie aus irgendeinem Grund nicht über den direkten Link verfügen, können Sie trotzdem versuchen, über einen direkten Zoom- oder Teams-Link beizutreten. Um über den Standard-Meeting-Link beizutreten:
 1. Besuchen Sie Scribe for Meetings.
