--- a/src/content/docs/de/makingmeetings.mdx
+++ b/src/content/docs/de/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Egal, ob die Einrichtung lange im Voraus oder innerhalb weniger Minuten nach Beginn der Besprechung erfolgt, sie ist schnell und effizient. Das Verfahren zum Starten der Besprechung wird je nach Ihrer Rolle leicht variieren.
 
-## Wenn Sie der Organisator sind
+### Wenn Sie der Organisator sind
 
 1. Geben Sie den Einladungslink für die Besprechung ein und klicken Sie dann auf "Los"
 1. Sie werden auf einer Seite landen, die Sie darüber informiert, dass dieses Meeting noch bei Scribe for Meetings registriert werden muss. Wenn Sie gefragt werden, wie Sie fortfahren möchten, klicken Sie auf "Hier klicken, wenn Sie der Organisator dieser Veranstaltung sind" Wenn Sie der Organisator der Veranstaltung sind, können Sie den Registrierungsprozess bis zum Ende durchlaufen.
@@ -27,7 +27,7 @@ Egal, ob die Einrichtung lange im Voraus oder innerhalb weniger Minuten nach Beg
 1. Innerhalb weniger Minuten, nachdem der Teilnehmer auf den Link geklickt und den Beitrittsprozess eingeleitet hat, wird der Scribe Bot versuchen, Ihrem Meeting beizutreten. Wenn Sie einen Warteraum haben, müssen Sie dem Bot den Eintritt in Ihr Meeting manuell erlauben, sobald Sie die Benachrichtigung von Ihrer Videokonferenzplattform erhalten haben. In jedem Fall wird der Scribe Bot geduldig auf Ihre Bildschirmfreigabe warten.
 1. Starten Sie den Diashow-Modus in Ihrem Präsentationsprogramm und geben Sie dann das Diashow-Fenster für Ihre Meeting-Teilnehmer frei. Alle Meeting-Teilnehmer, die Scribe for Meetings in ihrem Browser geladen haben, hören nun die zugänglichen Folien.
 
-## Wenn Sie nicht der Organisator sind:
+### Wenn Sie nicht der Organisator sind:
 
 Meetings können im Namen des Organisators eingerichtet werden, der dann die Folien hochladen kann.
 1. Geben Sie den Einladungslink für das Meeting ein und klicken Sie dann auf "Los"
