--- a/src/content/docs/de/meetingcontrols.mdx
+++ b/src/content/docs/de/meetingcontrols.mdx
@@ -9,7 +9,7 @@ In der Besprechung werden die Folieninhalte synchron mit der Bildschirmfreigabe 
 1. Sie hören einen Piepton.
 1. Der Inhalt wird auf dem Bildschirm angezeigt und von einem vorhandenen Bildschirmlesegerät vorgelesen.
 
-## Steuerelemente und Funktionen der Besprechung
+### Steuerelemente und Funktionen der Besprechung
 
 Scribe for Meetings bietet mehrere Möglichkeiten zur Steuerung des Renderings. Diese anklickbaren Schaltflächen haben auch einfach zu verwendende Tastaturkürzel. Zu den Steuerelementen gehören:
 * Präsentation unterbrechen: Hält die Live-Präsentation an, wobei Sie auf der aktuell angezeigten Folie stehen bleiben.      
@@ -27,7 +27,7 @@ Scribe for Meetings bietet mehrere Möglichkeiten zur Steuerung des Renderings. 
 * Folien herunterladen: Ermöglicht Ihnen das Herunterladen der Folien in verschiedenen Formaten.
     * Diese Option wird nur angezeigt, wenn der Organisator das Herunterladen der Folien erlaubt hat.
 
-## Folien herunterladen
+### Folien herunterladen
 
 Wenn der Veranstalter das Herunterladen der Folien erlaubt hat, bietet Scribe for Meetings die Möglichkeit, die Folien in mehreren zugänglichen Formaten herunterzuladen. Um Folien herunterzuladen, gehen Sie wie folgt vor:
 1. aktivieren Sie während eines Meetings den Link "Folien herunterladen".
@@ -53,7 +53,7 @@ Wenn der Veranstalter das Herunterladen der Folien erlaubt hat, bietet Scribe fo
 1. Warten Sie in Ihrer E-Mail auf den Download-Link. Bei den meisten Formaten wird die E-Mail innerhalb weniger Minuten eintreffen. Die Konvertierung in ein Audioformat kann je nach Länge des Foliendokuments wesentlich länger dauern, da die Sprachsynthese ein zeitaufwändigerer Prozess ist als andere Konvertierungen.
 1. Wenn Sie auf den Link klicken, wird der Download sofort gestartet.
 
-## Tastaturbefehl-Referenz
+### Tastaturbefehl-Referenz
 
 Die meisten Desktop-Browser können die mit den meisten Funktionen von Scribe For Meetings verbundenen Tastaturbefehle nutzen. Da diese Befehle je nach Plattform und Browser variieren können, werden im Folgenden alle möglichen Tastenkombinationen aufgeführt.
 
