--- a/src/content/docs/de/plans.mdx
+++ b/src/content/docs/de/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings bietet eine Vielzahl von Plänen und On-Demand-Kaufoptionen für Einzelpersonen, Unternehmen und Organisationen.
 
-## Meeting Pass
+### Meeting Pass
 
 Mit einem Meeting-Pass können Sie ein einzelnes Meeting mit Scribe for Meetings durchführen. Besprechungspässe laufen nicht ab.
 
-## Einzelabonnement
+### Einzelabonnement
 
 Mit einem Einzelabonnement kann ein Benutzer eine unbegrenzte Anzahl von Meetings durchführen. Einzelabonnements sind mit monatlicher oder jährlicher Abrechnungsperiode erhältlich.
 
-## Organisations-Abonnement
+### Organisations-Abonnement
 
 Organisationen jeder Größe können Scribe for Meetings über ein monatliches oder jährliches Abonnement zum Festpreis erwerben.
