--- a/src/content/docs/en/dashboard.mdx
+++ b/src/content/docs/en/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 Scribe  for Meetings features a  web-based dashboard to facilitate various meeting, account and organization management tasks.
 It should be noted that the feature set of the dashboard is largely dependent on whether you are a user or an admin.
 
-## Meeting Management
+### Meeting Management
 
 The meetings section lists all the meetings, past and present, facilitated by you and/or your organization. Clicking on a meeting opens a details page which allows you to:
 * Upload a new or revised slide deck
@@ -18,25 +18,25 @@ The meetings section lists all the meetings, past and present, facilitated by yo
 
 Clicking the "Delete" link next to a meeting will ask for confirmation, then delete the meeting from your account.
 
-## Attendance Statistics (admin)
+### Attendance Statistics (admin)
 
 The attendance statistics section gives you a daily, weekly, monthly, yearly and all time count of all the unique users attending meetings using Scribe for Meetings under your organization.
 
-## Meeting Defaults (admin)
+### Meeting Defaults (admin)
 
 The Meeting Defaults page, located under the Settings menu, allows you to set global defaults that persist across all meetings. They include:
 * Language
 * Automatic image description preference
 * Whether to allow the downloading of slides
 
-## Organization Management (admin)
+### Organization Management (admin)
 
 Clicking the "Organization" button reveals a "Members" link. This page allows you to add members to the organization, as well as manage existing members.
 
-### Adding Members
+#### Adding Members
 
 To add a member, simply enter their email into the "email Address" box, select their role in the dropdown, then click the "add" button.
 
-### Managing Existing users
+#### Managing Existing users
 
 Next to each user, there are two buttons. One allows you to switch their role, while the other deletes them from the organization.
