--- a/src/content/docs/en/gettingconnected.mdx
+++ b/src/content/docs/en/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings offers two quick, painless ways to connect to your accessible slide presentation.
 
-## Joining via Direct Link
+### Joining via Direct Link
 
 Similar to a meeting link from your teleconference platform, Scribe for Meetings offers direct links for joining your accessible slide presentation. If you receive one in your meeting invite or the meeting chat, you can click on it to instantly open Scribe for Meetings in your web browser. Once you click the "Start" button, one of two things may happen.
 1. You will hear a short chime, followed by a message informing you that Scribe for Meetings is preparing to provide access to the content in this meeting.
@@ -19,7 +19,7 @@ Similar to a meeting link from your teleconference platform, Scribe for Meetings
 
 In any case, Scribe for Meetings is now ready to start presenting the slides.
 
-## Joining via Meeting Link
+### Joining via Meeting Link
 
 If for any reason you do not have the direct link, you can still attempt to join via a direct Zoom or Teams link. In order to join via the standard meeting link:
 1. Visit Scribe for Meetings.
