--- a/src/content/docs/en/makingmeetings.mdx
+++ b/src/content/docs/en/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
 
-## If you are the Organizer
+### If you are the Organizer
 
 1. Enter the invite link for the meeting, then click "Go."
 1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
@@ -27,7 +27,7 @@ Whether done well in advance or within minutes of the meeting's start time, the 
 1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
 1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
 
-## If you are not the organizer:
+### If you are not the organizer:
 
 Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
 1. Enter the invite link for the meeting, then click "Go."
