--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -9,7 +9,7 @@ Once inside the meeting, slide content will be presented in sync with the presen
 1. You will heara beep.
 1. The content will present itself onscreen and be read out by an existing screen reader.
 
-## Meeting Controls and Functions
+### Meeting Controls and Functions
 
 Scribe for Meetings offers several ways to control the rendering. These clickable buttons have easy-to-use keyboard shortcuts as well. Controls include:
 * Suspend Presentation: Pauses the live presentation, holding your place at the currently displayed slide.      
@@ -27,7 +27,7 @@ Scribe for Meetings offers several ways to control the rendering. These clickabl
 * Download slides: Allows you to download the slides in several different formats.
     * This option only shows if the organizer has allowed the slides to be downloaded.
 
-## Downloading slides
+### Downloading slides
 
 Provided the organizer has allowed for slides to be downloaded, Scribe for Meetings offers downloads of the slides in several accessible formats. In order to download slides, follow the below procedure:
 1. while in a meeting, activate the "Download Slides" link.
@@ -53,7 +53,7 @@ Provided the organizer has allowed for slides to be downloaded, Scribe for Meeti
 1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
 1. Clicking the link will instantly begin the download.
 
-## Keyboard Command Reference
+### Keyboard Command Reference
 
 Most desktop browsers can take advantage of the keyboard commands associated with most Scribe For Meetings functions. Because these commands can vary depending on platform and browser, we will list all possible shortcuts below.
 
