--- a/src/content/docs/en/plans.mdx
+++ b/src/content/docs/en/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for meetings has a variety of plans and on-demand purchase options for individuals, companies and organizations.
 
-## Meeting Pass
+### Meeting Pass
 
 A meeting pass allows you to conduct a single meeting using Scribe for Meetings. Meeting passes do not expire.
 
-## Individual Subscription
+### Individual Subscription
 
 Individual subscriptions allow a user to conduct an unlimited amount of meetings. Individual subscriptions are available in monthly and yearly billing terms.
 
-## Organization Subscription
+### Organization Subscription
 
 Organizations of any size can acquire Scribe for Meetings via a fixed price monthly or yearly subscription.
