--- a/src/content/docs/es/dashboard.mdx
+++ b/src/content/docs/es/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 Scribe for Meetings cuenta con un panel de control basado en web para facilitar diversas tareas de gestión de reuniones, cuentas y organizaciones.
 Cabe señalar que el conjunto de funciones del panel depende en gran medida de si se es usuario o administrador.
 
-## Gestión de reuniones
+### Gestión de reuniones
 
 La sección de reuniones enumera todas las reuniones, pasadas y presentes, facilitadas por usted y/o su organización. Al hacer clic en una reunión se abre una página de detalles que le permite:
 * Cargar una presentación nueva o revisada
@@ -18,25 +18,25 @@ La sección de reuniones enumera todas las reuniones, pasadas y presentes, facil
 
 Al hacer clic en el enlace "Eliminar" situado junto a una reunión, se le pedirá confirmación y, a continuación, se eliminará la reunión de su cuenta.
 
-## Estadísticas de asistencia (admin)
+### Estadísticas de asistencia (admin)
 
 La sección de estadísticas de asistencia le ofrece un recuento diario, semanal, mensual, anual y en todo momento de todos los usuarios únicos que asisten a reuniones utilizando Scribe for Meetings bajo su organización.
 
-## Valores predeterminados de las reuniones (admin)
+### Valores predeterminados de las reuniones (admin)
 
 La página Valores predeterminados de la reunión, situada en el menú Configuración, le permite establecer valores predeterminados globales que se mantienen en todas las reuniones. Entre ellos se incluyen:
 * Idioma
 * Preferencia de descripción automática de imágenes
 * Permitir o no la descarga de diapositivas
 
-## Gestión de la organización (admin)
+### Gestión de la organización (admin)
 
 Al hacer clic en el botón "Organización" aparece el enlace "Miembros". Esta página le permite añadir miembros a la organización, así como gestionar los miembros existentes.
 
-### Añadir miembros
+#### Añadir miembros
 
 Para añadir un miembro, basta con introducir su dirección de correo electrónico en la casilla "Dirección de correo electrónico", seleccionar su función en el menú desplegable y hacer clic en el botón "Añadir".
 
-### Gestión de usuarios existentes
+#### Gestión de usuarios existentes
 
 Junto a cada usuario, hay dos botones. Uno le permite cambiar su rol, mientras que el otro lo elimina de la organización.
