--- a/src/content/docs/es/gettingconnected.mdx
+++ b/src/content/docs/es/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings ofrece dos formas rápidas e indoloras de conectarse a su presentación de diapositivas accesible.
 
-## Conectarse a través de un enlace directo
+### Conectarse a través de un enlace directo
 
 De forma similar a un enlace de reunión de su plataforma de teleconferencia, Scribe for Meetings ofrece enlaces directos para unirse a su presentación de diapositivas accesible. Si recibe uno en su invitación a la reunión o en el chat de la reunión, puede hacer clic en él para abrir al instante Scribe for Meetings en su navegador web. Una vez que haga clic en el botón "Iniciar", puede ocurrir una de estas dos cosas.
 1. Oirá una breve campanada, seguida de un mensaje que le informará de que Scribe for Meetings se está preparando para proporcionar acceso al contenido de esta reunión.
@@ -19,7 +19,7 @@ De forma similar a un enlace de reunión de su plataforma de teleconferencia, Sc
 
 En cualquier caso, Scribe for Meetings ya está listo para empezar a presentar las diapositivas.
 
-## Unirse a través de un enlace de reunión
+### Unirse a través de un enlace de reunión
 
 Si por cualquier motivo no dispone del enlace directo, puede intentar unirse a través de un enlace directo de Zoom o Teams. Para unirse a través del enlace de reunión estándar:
 1. Visite Scribe for Meetings.
