--- a/src/content/docs/es/makingmeetings.mdx
+++ b/src/content/docs/es/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Tanto si se hace con mucha antelación como a pocos minutos de la hora de inicio de la reunión, el proceso de preparación es rápido y eficaz. El procedimiento para iniciar la reunión variará ligeramente en función de su función.
 
-## Si eres el Organizador
+### Si eres el Organizador
 
 1. Introduzca el enlace de invitación a la reunión y haga clic en "Ir"
 1. Llegará a una página en la que se le informará de que esta reunión aún no se ha registrado en Scribe for Meetings. Cuando se le pregunte cómo desea proceder, haga clic en "Haga clic aquí si es el organizador de este evento" Si usted es el organizador del evento, podrá completar el proceso de registro.
@@ -27,7 +27,7 @@ Tanto si se hace con mucha antelación como a pocos minutos de la hora de inicio
 1. A los pocos minutos de que el participante haga clic en el enlace e inicie el proceso de participación, el Scribe Bot intentará unirse a su reunión. Si tiene una sala de espera, tendrá que permitir la entrada del bot a su reunión manualmente una vez que reciba la alerta de su plataforma de videoconferencia. En cualquiera de los dos casos, el Scribe Bot esperará pacientemente tu screenshare.
 1. Inicie el modo de presentación de diapositivas en su programa de presentación y, a continuación, comparta la ventana de presentación de diapositivas con los participantes en la reunión. Todos los participantes en la reunión que tengan Scribe for Meetings cargado en su navegador empezarán a escuchar las diapositivas accesibles.
 
-## Si usted no es el organizador:
+### Si usted no es el organizador:
 
 Las reuniones se pueden configurar en nombre del organizador, que podrá cargar las diapositivas.
 1. Introduzca el enlace de invitación a la reunión y haga clic en "Ir"
