--- a/src/content/docs/es/meetingcontrols.mdx
+++ b/src/content/docs/es/meetingcontrols.mdx
@@ -9,7 +9,7 @@ Una vez dentro de la reunión, el contenido de las diapositivas se presentará s
 1. Escuchará un pitido.
 1. El contenido se presentará en pantalla y será leído por un lector de pantalla existente.
 
-## Controles y funciones de la reunión
+### Controles y funciones de la reunión
 
 Scribe for Meetings ofrece varias formas de controlar la representación. Estos botones en los que se puede hacer clic también tienen atajos de teclado fáciles de usar. Los controles incluyen:
 * Suspender presentación: Pausa la presentación en vivo, manteniendo su lugar en la diapositiva que se muestra actualmente.      
@@ -27,7 +27,7 @@ Scribe for Meetings ofrece varias formas de controlar la representación. Estos 
 * Descargar diapositivas: Permite descargar las diapositivas en varios formatos diferentes.
     * Esta opción sólo se muestra si el organizador ha permitido la descarga de las diapositivas.
 
-## Descarga de diapositivas
+### Descarga de diapositivas
 
 Siempre que el organizador haya permitido la descarga de las diapositivas, Scribe for Meetings ofrece la posibilidad de descargar las diapositivas en varios formatos accesibles. Para descargar las diapositivas, siga el procedimiento que se indica a continuación:
 1. estando en una reunión, active el enlace "Descargar diapositivas".
@@ -53,7 +53,7 @@ Siempre que el organizador haya permitido la descarga de las diapositivas, Scrib
 1. Esté atento a su correo electrónico para recibir el enlace de descarga. Para la mayoría de los formatos, el correo electrónico llegará en unos minutos. La conversión a audio puede llevar mucho más tiempo, dependiendo de la longitud de la presentación de diapositivas, porque la síntesis de voz es un proceso que lleva más tiempo que otras conversiones.
 1. Al hacer clic en el enlace, se iniciará inmediatamente la descarga.
 
-## Referencia de comandos de teclado
+### Referencia de comandos de teclado
 
 La mayoría de los navegadores de escritorio pueden aprovechar los comandos de teclado asociados a la mayoría de las funciones de Scribe For Meetings. Dado que estos comandos pueden variar en función de la plataforma y el navegador, a continuación se enumeran todos los métodos abreviados posibles.
 
