--- a/src/content/docs/es/plans.mdx
+++ b/src/content/docs/es/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe para reuniones tiene una variedad de planes y opciones de compra a la carta para particulares, empresas y organizaciones.
 
-## Meeting Pass
+### Meeting Pass
 
 Un pase de reunión le permite llevar a cabo una única reunión utilizando Scribe for Meetings. Los pases de reunión no caducan.
 
-## Suscripción individual
+### Suscripción individual
 
 Las suscripciones individuales permiten al usuario realizar un número ilimitado de reuniones. Las suscripciones individuales están disponibles en términos de facturación mensual y anual.
 
-## Suscripción de organización
+### Suscripción de organización
 
 Las organizaciones de cualquier tamaño pueden adquirir Scribe for Meetings mediante una suscripción mensual o anual a un precio fijo.
