--- a/src/content/docs/es/welcome.mdx
+++ b/src/content/docs/es/welcome.mdx
@@ -6,11 +6,11 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Presentación de Scribe for Meetings
+### Presentación de Scribe for Meetings
 
 Scribe for Meetings hace que las pantallas compartidas de Zoom o Microsoft Teams sean fácilmente accesibles para los participantes que utilicen un lector de pantalla o una ampliación de pantalla Sabemos que el cumplimiento de la accesibilidad es importante para usted, especialmente cuando no está seguro de si su contenido original está totalmente optimizado para la accesibilidad. Scribe for Meetings puede fácilmente hacer que su pantalla compartida esté disponible simultáneamente como HTML compatible con WCAG2.1 en tan sólo 5 minutos.
 
-## ¿Es fácil utilizar Scribe for Meetings?
+#### ¿Es fácil utilizar Scribe for Meetings?
 
 1. Cargue su paquete de diapositivas con antelación o tan solo 5 minutos antes de su seminario web.
 1. Pegue un enlace en la zona de chat que le proporcionamos durante su reunión (incluye instrucciones para los participantes).
@@ -18,7 +18,7 @@ Scribe for Meetings hace que las pantallas compartidas de Zoom o Microsoft Teams
 
 ¡Y empieza la presentación de diapositivas!
 
-## Características de SCribe For Meetings
+#### Características de SCribe For Meetings
 
 * Carga con confianza contenido compartido accesible en tan sólo 5 minutos antes de tu presentación.
 * No es necesario instalar ninguna aplicación o software adicional para crear o acceder al contenido.
@@ -28,13 +28,13 @@ Scribe for Meetings hace que las pantallas compartidas de Zoom o Microsoft Teams
 * Los participantes pueden pausar la visualización en cualquier momento para leer más mientras usted continúa.
 * Un clic y los asistentes estarán leyendo tu presentación con su lector de pantalla.
 
-## Increíblemente sencillo, increíblemente potente.
+#### Increíblemente sencillo, increíblemente potente.
 
 Al hacer accesibles las pantallas compartidas con Scribe for Meetings, el contenido se muestra en una ventana independiente. Los participantes siguen teniendo acceso completo a la sesión de Zoom o Microsoft Teams.
 Los asistentes pueden pasar de la reunión de Zoom o Microsoft Teams a la pantalla compartida accesible en cualquier momento.
 
 No es necesario dar instrucciones adicionales sobre cómo acceder al contenido compartido ni interrumpir el flujo de la presentación. Los participantes leerán intuitivamente el contenido como en cualquier otra página web.
 
-## Interfaz de documentación
+### Interfaz de documentación
 
 Esta documentación presenta controles sencillos para pasar de una sección a otra, así como para seleccionar el idioma en el que se desea leer la documentación.
