--- a/src/content/docs/fr/dashboard.mdx
+++ b/src/content/docs/fr/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 Scribe for Meetings dispose d'un tableau de bord basé sur le Web pour faciliter diverses tâches de gestion des réunions, des comptes et des organisations.
 Il convient de noter que les fonctionnalités du tableau de bord dépendent en grande partie de votre statut d'utilisateur ou d'administrateur.
 
-## Gestion des réunions
+### Gestion des réunions
 
 La section des réunions répertorie toutes les réunions, passées et présentes, organisées par vous et/ou votre organisation. En cliquant sur une réunion, vous ouvrez une page de détails qui vous permet de
 * De télécharger un nouveau diaporama ou un diaporama révisé
@@ -18,25 +18,25 @@ La section des réunions répertorie toutes les réunions, passées et présente
 
 En cliquant sur le lien "Supprimer" à côté d'une réunion, une confirmation vous sera demandée, puis la réunion sera supprimée de votre compte.
 
-## Statistiques de participation (admin)
+### Statistiques de participation (admin)
 
 La section des statistiques de participation vous donne un décompte quotidien, hebdomadaire, mensuel, annuel et permanent de tous les utilisateurs uniques qui participent à des réunions en utilisant Scribe for Meetings au sein de votre organisation.
 
-## Paramètres par défaut des réunions (admin)
+### Paramètres par défaut des réunions (admin)
 
 La page Paramètres de la réunion, située dans le menu Paramètres, vous permet de définir des paramètres globaux par défaut qui persistent dans toutes les réunions. Il s'agit des paramètres suivants
 * Langue
 * Préférence de description automatique des images
 * Autoriser ou non le téléchargement des diapositives
 
-## Gestion de l'organisation (admin)
+### Gestion de l'organisation (admin)
 
 En cliquant sur le bouton "Organisation", un lien "Membres" apparaît. Cette page vous permet d'ajouter des membres à l'organisation et de gérer les membres existants.
 
-### Ajout de membres
+#### Ajout de membres
 
 Pour ajouter un membre, il suffit de saisir son adresse électronique dans le champ "Adresse électronique", de sélectionner son rôle dans la liste déroulante, puis de cliquer sur le bouton "Ajouter".
 
-### Gérer les utilisateurs existants
+#### Gérer les utilisateurs existants
 
 À côté de chaque utilisateur, il y a deux boutons. L'un d'eux vous permet de modifier leur rôle, tandis que l'autre les supprime de l'organisation.
