--- a/src/content/docs/fr/faq.mdx
+++ b/src/content/docs/fr/faq.mdx
@@ -8,19 +8,19 @@ import MacOS from "~/components/platform/MacOS.astro"
 Voici les réponses à certaines questions courantes concernant Scribe for Meetings. En cas de problème, veuillez vous référer à ce document dans la mesure du possible.  
 Vous ne trouvez pas votre question ? [Contactez-nous ](https://pneumasolutions.com/contact/), et nous vous aiderons à résoudre votre problème.
 
-## Qu'est-ce que Scribe for Meetings ?
+### Qu'est-ce que Scribe for Meetings ?
 
 Scribe for Meetings est une technologie basée sur le cloud qui prend une présentation partagée sur des plateformes telles que Zoom, Microsoft Teams, Google Meet, et d'autres, et la rend accessible en temps réel aux personnes incapables de lire les imprimés.
 
-## Qui bénéficie de Scribe for Meetings ?
+### Qui bénéficie de Scribe for Meetings ?
 
 D'abord et surtout, les millions de personnes incapables de lire les imprimés qui, autrement, ne bénéficieraient pas des informations présentées ; et les masses d'entreprises, grandes et petites, les agences gouvernementales, tous les niveaux d'éducation, et les organisations qui en savent peu sur l'accessibilité mais qui voudraient un moyen abordable de rendre leur contenu plus inclusif.
 
-## Pourquoi devrais-je choisir Scribe for Meetings plutôt que d'autres produits ?
+### Pourquoi devrais-je choisir Scribe for Meetings plutôt que d'autres produits ?
 
 Nous sommes convaincus qu'il n'y a rien d'autre sur le marché qui fasse ce que nous faisons de la manière dont nous le faisons. Scribe for Meetings est la première technologie de ce type à se synchroniser avec les plateformes de réunion en temps réel. Bien sûr, les concurrents en prendront note et lanceront probablement leurs imitations, et nous attendons avec impatience la concurrence, mais à moins qu'ils ne prévoient de rivaliser sur les prix, nous sommes convaincus que vous trouverez ce dont vous avez besoin ici même.
 
-## Comment fonctionne Scribe for Meetings ?
+### Comment fonctionne Scribe for Meetings ?
 
 Si vous êtes l'hôte :
 1. Visitez [ScribeForMeetings.com,](https://scribeformeetings.com) collez le lien d'invitation pour votre réunion, et appuyez sur "Go".
@@ -32,28 +32,28 @@ Si vous êtes l'hôte :
 Votre contenu sera prêt à être lancé en quelques minutes. Aucune connaissance en matière de création de présentations accessibles n'est requise. En tant qu'hôte, vous n'avez pas besoin d'exécuter de logiciel supplémentaire sur votre appareil, et le contenu peut être téléchargé 5 minutes seulement avant la réunion.
 Pour les personnes incapables de lire les imprimés, rendez-vous sur https://www.ScribeForMeetings.com, collez le lien d'invitation de Zoom ou de Microsoft Teams et cliquez sur "Go". Il se peut également que l'organisateur de la réunion vous ait fourni un lien direct vers Scribe for Meetings, soit dans l'e-mail d'invitation, soit au cours de la réunion elle-même, par le biais d'un chat. Quel que soit le moyen utilisé, vous êtes maintenant prêt à suivre la présentation dans n'importe quel navigateur web sur n'importe quelle plateforme.
 
-## Quelle est la difficulté d'installation de Scribe for Meetings ?
+### Quelle est la difficulté d'installation de Scribe for Meetings ?
 
 Scribe for Meetings n'est pas une application installée. Il s'agit d'un service en nuage, de sorte que rien d'autre qu'un navigateur n'est nécessaire pour profiter d'une réunion. Pour les présentateurs, hormis le téléchargement de leur contenu avant la réunion, le processus a été intentionnellement conçu pour être simple. Il n'y a rien à installer sur votre ordinateur ou votre appareil autre que Zoom, Microsoft Teams ou des plateformes de réunion similaires.
 Les entreprises peuvent héberger Scribe for Meetings sur leurs propres serveurs. Veuillez nous contacter pour plus de détails.
 
-## Je vois un participant nommé "Scribe for Meetings" qui essaie de rejoindre ma réunion. Que se passe-t-il ?
+### Je vois un participant nommé "Scribe for Meetings" qui essaie de rejoindre ma réunion. Que se passe-t-il ?
 
 Il s'agit du robot Scribe. Ce robot surveille l'écran de votre réunion, afin de voir quelle diapositive est actuellement affichée et d'en fournir la version accessible en temps réel aux participants incapables de lire les imprimés. Le robot Scribe ne perturbera en rien votre réunion et ne recueillera aucune information autre que le contenu actuellement affiché par le biais du partage d'écran. Si votre réunion dispose d'une salle d'attente, veuillez admettre rapidement le robot Scribe dans la réunion. Sinon, Scribe for Meetings ne fonctionnera pas.
 
-## Je participe à une réunion avec des personnes incapables de lire les imprimés et je ne sais pas si la réunion à laquelle j'assiste a été enregistrée par Scribe for Meetings. Que dois-je faire ?
+### Je participe à une réunion avec des personnes incapables de lire les imprimés et je ne sais pas si la réunion à laquelle j'assiste a été enregistrée par Scribe for Meetings. Que dois-je faire ?
 
 Rendez-vous sur [ScribeForMeetings.com] (https://scribeformeetings.com), collez le lien d'invitation Zoom ou Microsoft Teams pour votre réunion et appuyez sur "Go". Si la réunion a été enregistrée avec Scribe for Meetings, vous êtes prêt à suivre les diapositives accessibles. Si ce n'est pas le cas, vous pouvez vous inscrire pour être averti par courriel lorsque la réunion a été enregistrée avec Scribe for Meetings.
 
-## Je participe souvent à des réunions Zoom ou Microsoft Teams. Quel est le moyen le plus simple pour moi de savoir si une réunion est enregistrée avec Scribe for Meetings et, le cas échéant, d'afficher le contenu accessible ?
+### Je participe souvent à des réunions Zoom ou Microsoft Teams. Quel est le moyen le plus simple pour moi de savoir si une réunion est enregistrée avec Scribe for Meetings et, le cas échéant, d'afficher le contenu accessible ?
 
 Scribe for Meetings dispose d'une [extension pour Chrome et Edge] (https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) qui vérifie la disponibilité sur Scribe for Meetings de toute réunion Zoom ou Microsoft Teams à laquelle vous participez. À l'aide d'un simple raccourci clavier, vous pouvez afficher le contenu accessible si la réunion est enregistrée, ou demander une notification de suivi si la réunion est enregistrée ultérieurement dans Scribe for Meetings.
 
-## Je participe à une réunion avec des personnes incapables de lire les imprimés. Avez-vous des ressources pour m'aider à demander à l'organisateur de la réunion d'utiliser Scribe for Meetings ?
+### Je participe à une réunion avec des personnes incapables de lire les imprimés. Avez-vous des ressources pour m'aider à demander à l'organisateur de la réunion d'utiliser Scribe for Meetings ?
 
 Oui, consultez notre [Kit d'autodéfense Scribe pour les réunions] (https://sak.scribeformeetings.com). Vous y trouverez une variété de lettres pré-écrites que vous pourrez personnaliser, puis copier et coller dans un courriel.
 
-## Scribe for Meetings peut-il convertir une présentation dans des formats de fichiers accessibles pour une visualisation hors ligne ?
+### Scribe for Meetings peut-il convertir une présentation dans des formats de fichiers accessibles pour une visualisation hors ligne ?
 
 Oui. Lors de la création de la réunion, le présentateur peut choisir de fournir sa présentation pour le téléchargement dans les formats de fichiers suivants :
 * Une page Web accessible, avec toutes les mêmes fonctionnalités que la présentation en direct, y compris la lecture à haute voix
@@ -74,7 +74,7 @@ Pour une réunion où cette fonctionnalité est activée, dès que le présentat
 1. Cliquez sur le bouton "Préparer le téléchargement".
 1. Surveillez votre courrier électronique pour le lien de téléchargement. Pour la plupart des formats, l'e-mail arrivera en quelques minutes. La conversion en format audio peut prendre beaucoup plus de temps, en fonction de la longueur du jeu de diapositives, car la synthèse vocale est un processus qui prend plus de temps que les autres conversions.
 
-## J'organise de nombreuses réunions et je souhaite permettre à mes participants de télécharger les diapositives de toutes ces réunions. Puis-je activer cette fonction par défaut ?
+### J'organise de nombreuses réunions et je souhaite permettre à mes participants de télécharger les diapositives de toutes ces réunions. Puis-je activer cette fonction par défaut ?
 
 Oui. Procédez comme suit :
 1. 
@@ -83,60 +83,60 @@ Rendez-vous sur le site ScribeForMeetings.com.
 1. Cliquez sur "Paramètres", puis sur "Valeurs par défaut des réunions".
 1. Cochez la case "Permettre aux participants de télécharger des versions accessibles des diapositives", puis cliquez sur "Enregistrer".
 
-## Je souhaite protéger mes diapositives contre la copie et la distribution non autorisées. Scribe for Meetings prend-il en charge cette protection ?
+### Je souhaite protéger mes diapositives contre la copie et la distribution non autorisées. Scribe for Meetings prend-il en charge cette protection ?
 
 Malheureusement, Scribe for Meetings ne peut pas empêcher vos participants de copier le texte de vos diapositives. Cependant, si vous n'autorisez pas le téléchargement des diapositives, il ne sera pas facile pour les participants de copier vos diapositives, car ils devront le faire une par une. Notez également qu'en pratique, cela ne diffère pas de ce que tout participant peut déjà faire en prenant des captures d'écran de vos diapositives.
 
-## Scribe for Meetings est-il multilingue ?
+### Scribe for Meetings est-il multilingue ?
 
 Oui, Scribe for Meetings peut restituer le contenu dans 140 langues, sans effort supplémentaire de la part du présentateur.
 
-## Dois-je ralentir ma présentation pour m'assurer que les participants incapables de lire les imprimés puissent suivre ?
+### Dois-je ralentir ma présentation pour m'assurer que les participants incapables de lire les imprimés puissent suivre ?
 
 Scribe for Meetings dispose d'une fonction appelée Représentation visuelle dynamique, ou mode DVR, qui permet aux participants incapables de lire les caractères imprimés de lire vos diapositives accessibles à leur propre rythme. Un participant peut interrompre la présentation en direct, revenir à une diapositive qu'il a déjà lue, avancer à son propre rythme, puis reprendre la présentation en direct lorsqu'il est prêt.
 Pour utiliser le mode DVR, l'invité doit appuyer sur le bouton Suspendre la présentation ou sur le bouton Diapositive précédente. Ces boutons sont identifiés comme tels pour les utilisateurs de lecteurs d'écran et pour les utilisateurs de souris qui les survolent. Visuellement, ils se trouvent en bas de la page et ressemblent aux boutons Pause et Piste précédente d'un lecteur multimédia. Lorsque l'utilisateur appuie sur l'un de ces boutons, la présentation en direct se met en pause et le bouton Diapositive précédente permet de revenir à la diapositive précédente. L'utilisateur peut alors utiliser les boutons Diapositive précédente et Diapositive suivante pour parcourir les diapositives à son propre rythme, et le bouton Aller en direct pour revenir à la présentation en direct. Ces boutons ressemblent aux boutons Piste précédente, Piste suivante et Lecture d'un lecteur multimédia.  
 Notez que le mode DVR ne permet aux participants que de revoir les diapositives qui ont été présentées depuis qu'ils ont rejoint la présentation. Si un participant incapable de lire les imprimés est en retard pour votre présentation, il a manqué les mêmes diapositives que n'importe quel autre participant en retard.
 
-## J'ai un participant incapable de lire les imprimés qui bénéficierait de la lecture à haute voix de mon contenu, mais qui n'est pas à l'aise avec un lecteur d'écran complet. Scribe for Meetings peut-il m'aider ?
+### J'ai un participant incapable de lire les imprimés qui bénéficierait de la lecture à haute voix de mon contenu, mais qui n'est pas à l'aise avec un lecteur d'écran complet. Scribe for Meetings peut-il m'aider ?
 
 Oui. Notre fonction de lecture à haute voix prononcera vos diapositives en utilisant les voix fournies par l'appareil et le navigateur Web de l'utilisateur, tout en dessinant un cadre autour de chaque mot au fur et à mesure qu'il est prononcé afin d'aider l'utilisateur à suivre visuellement. Pour les utilisateurs de Windows, nous recommandons vivement le navigateur Microsoft Edge pour cette fonction, car il offre gratuitement des voix exceptionnelles dans plusieurs langues. Cependant, cette fonction fonctionne également avec toutes les autres plateformes et navigateurs principaux, y compris les appareils mobiles.  
 Pour commencer à lire la diapositive en cours à haute voix, appuyez sur le bouton Lire à haute voix, qui se trouve en bas de l'écran et qui ressemble à un haut-parleur. Pendant que Scribe for Meetings lit la diapositive à haute voix, il affichera des commandes pour arrêter la lecture (le bouton avec une icône carrée), mettre en pause ou reprendre, revenir en arrière ou en avant (les boutons qui ressemblent aux boutons Piste précédente et Piste suivante d'un lecteur multimédia), accélérer et ralentir la lecture, ou changer la voix. Ces commandes disparaîtront dès que la lecture sera terminée ou que l'utilisateur l'arrêtera.  
 Notez que le mode Lecture à voix haute et le mode DVR (voir ci-dessus) peuvent être utilisés ensemble pour permettre aux participants incapables de lire les caractères imprimés de lire les diapositives à leur manière et à leur rythme.
 
-## J'ai un participant incapable de lire les caractères imprimés qui a besoin de mes diapositives en gros caractères, mais qui n'a pas besoin d'un programme d'agrandissement en plein écran. Scribe for Meetings peut-il m'aider ?
+### J'ai un participant incapable de lire les caractères imprimés qui a besoin de mes diapositives en gros caractères, mais qui n'a pas besoin d'un programme d'agrandissement en plein écran. Scribe for Meetings peut-il m'aider ?
 
 Oui. Scribe for Meetings affiche vos diapositives de manière à les rendre accessibles aux participants ayant besoin de tout type de contenu. Si des polices de grande taille sont nécessaires, un participant peut utiliser la fonction de zoom de son navigateur pour ajuster la taille de la police des diapositives, sans que l'utilisateur n'ait à faire défiler continuellement les diapositives d'avant en arrière. Scribe for Meetings affichera également automatiquement le texte dans le schéma de couleurs préféré de l'utilisateur, qu'il s'agisse du schéma habituel foncé sur clair, clair sur foncé (également connu sous le nom de mode sombre), ou d'un schéma personnalisé.  
 
-## Attendez ! Que se passe-t-il ici ? Pourquoi mes diapositives sont-elles si différentes dans Scribe for Meetings que dans ma présentation ?
+### Attendez ! Que se passe-t-il ici ? Pourquoi mes diapositives sont-elles si différentes dans Scribe for Meetings que dans ma présentation ?
 
 Chaque aspect de l'affichage de vos diapositives par Scribe for Meetings est optimisé pour l'accessibilité, pour les participants ayant des difficultés à lire les caractères. Étant donné que Scribe for Meetings est conçu pour être utilisé parallèlement à votre plateforme de réunion existante, les participants sont toujours libres de revenir à la fenêtre principale de la réunion pour voir les diapositives telles qu'elles sont affichées dans votre présentation sans accessibilité.
 
-## Je n'utilise pas PowerPoint. Puis-je quand même rendre ma présentation accessible avec Scribe for Meetings ?
+### Je n'utilise pas PowerPoint. Puis-je quand même rendre ma présentation accessible avec Scribe for Meetings ?
 
 Scribe for Meetings peut rendre vos diapositives partagées accessibles, quelle que soit l'application que vous utilisez pour les présenter, à condition que vous puissiez fournir votre jeu de diapositives au format PowerPoint. D'autres applications de présentation telles que Keynote et Google Slides peuvent convertir leurs jeux de diapositives au format PowerPoint, vous pouvez donc les utiliser avec Scribe for Meetings.
 
-## Scribe for Meetings n'affiche pas les versions accessibles de mes diapositives pendant la présentation, ou en saute certaines. Que se passe-t-il ?
+### Scribe for Meetings n'affiche pas les versions accessibles de mes diapositives pendant la présentation, ou en saute certaines. Que se passe-t-il ?
 
 Assurez-vous que vous présentez vos diapositives dans un diaporama plein écran et que vous avez configuré le partage d'écran Zoom ou Microsoft Teams pour partager ce diaporama avec votre public. Si vous utilisez PowerPoint pour Windows pour exécuter votre présentation, une fois que vous avez ouvert PowerPoint, appuyez sur F5 pour passer en mode diaporama.
 (En savoir plus sur l'utilisation du partage d'écran Zoom avec PowerPoint) (https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
 [En savoir plus sur l'utilisation du partage d'écran Microsoft Teams avec PowerPoint](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## Comment Scribe for Meetings gère-t-il les images et les graphiques dans mes diapositives ?
+### Comment Scribe for Meetings gère-t-il les images et les graphiques dans mes diapositives ?
 
 Si vous avez déjà rédigé des descriptions (également appelées balises alt ou légendes) pour le contenu graphique de vos diapositives, Scribe for Meetings les utilisera. Dans le cas contraire, Scribe for Meetings utilisera un service de description d'images basé sur le cloud et basé sur l'apprentissage automatique pour ajouter automatiquement des balises alt pour vos graphiques. Si ces images contiennent du texte, Scribe for Meetings utilisera également la reconnaissance optique de caractères (OCR) pour rendre ce texte accessible.
 
-## Mes diapositives contiennent des tableaux, des diagrammes ou d'autres graphiques complexes. Scribe for Meetings peut-il les gérer ?
+### Mes diapositives contiennent des tableaux, des diagrammes ou d'autres graphiques complexes. Scribe for Meetings peut-il les gérer ?
 
 La réponse courte est : non, pour la plupart. Nous travaillons encore sur ce point. La plateforme de remédiation des documents augmentés de Scribe étant alimentée par l'apprentissage automatique, au fur et à mesure que nous recevrons des documents et des diapositives contenant des graphiques complexes, nous serons en mesure d'entraîner notre modèle à rendre ces graphiques accessibles. Mais pour l'instant, vous n'avez qu'à essayer pour voir.
 
-## Scribe for Meetings fonctionne-t-il avec des plateformes de réunion autres que Zoom et Microsoft Teams, comme Jitsi Meet, Google Meet, Slack, Amazon Chime ou BlueJeans ?
+### Scribe for Meetings fonctionne-t-il avec des plateformes de réunion autres que Zoom et Microsoft Teams, comme Jitsi Meet, Google Meet, Slack, Amazon Chime ou BlueJeans ?
 
 Pas encore, mais cela ne saurait tarder.
 
-## Comment les membres de notre organisation se connectent-ils à Scribe for Meetings ?
+### Comment les membres de notre organisation se connectent-ils à Scribe for Meetings ?
 
 Scribe for Meetings prend actuellement en charge deux options d'authentification. L'option la plus simple est notre processus de connexion par courrier électronique. Il vous suffit de saisir votre adresse électronique et nous vous enverrons un lien que vous pourrez utiliser pour vous connecter ; aucun mot de passe n'est nécessaire. Pour les organisations ayant des exigences de sécurité plus strictes, nous pouvons également nous intégrer à des systèmes d'authentification unique (SSO) qui mettent en œuvre la norme SAML, soit via la fédération [InCommon] (https://www.incommon.org/), soit en utilisant un échange bilatéral de métadonnées. Notre fournisseur de services SAML utilise le progiciel open-source Shibboleth SP et a été mis en œuvre en partenariat avec [Signet, Inc.](https://www.signet.id/), une société de gestion d'identité et de contrôle d'accès fondée par un architecte de Shibboleth. Notez que nous prenons en charge le SSO par le biais d'une variété de fournisseurs d'identité ; en plus de Shibboleth IdP, nous avons testé Azure Active Directory. Lorsque votre organisation s'inscrit à Scribe for Meetings, nous vous offrons un service d'intégration SSO, couvert par les frais d'installation.
 
-## Quel est l'avenir de Scribe for Meetings ?
+### Quel est l'avenir de Scribe for Meetings ?
 
 Scribe, la plateforme qui sous-tend notre gamme de produits Scribe, apprend activement à chaque fois qu'un document est traité. La technologie Augmented Document Remediation, basée sur l'apprentissage automatique, devient plus intelligente à chaque page, nous rapprochant ainsi d'une précision de 100 %. Les avantages se répercutent sur tous nos produits, faisant de Scribe for Meetings une application qui ne fera que s'améliorer au fur et à mesure que vous l'utiliserez.
