--- a/src/content/docs/fr/gettingconnected.mdx
+++ b/src/content/docs/fr/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings offre deux moyens rapides et sans douleur de se connecter à votre présentation de diapositives accessibles.
 
-## Rejoindre via un lien direct
+### Rejoindre via un lien direct
 
 À l'instar d'un lien de réunion provenant de votre plateforme de téléconférence, Scribe for Meetings propose des liens directs pour se connecter à votre présentation de diapositives accessibles. Si vous recevez un lien dans votre invitation à la réunion ou dans le chat de la réunion, vous pouvez cliquer dessus pour ouvrir instantanément Scribe for Meetings dans votre navigateur Web. Une fois que vous avez cliqué sur le bouton "Démarrer", l'une des deux choses suivantes peut se produire.
 1. Vous entendrez un petit carillon, suivi d'un message vous informant que Scribe for Meetings se prépare à fournir un accès au contenu de cette réunion.
@@ -19,7 +19,7 @@ Scribe for Meetings offre deux moyens rapides et sans douleur de se connecter à
 
 Quoi qu'il en soit, Scribe for Meetings est maintenant prêt à commencer la présentation des diapositives.
 
-## Rejoindre via le lien de la réunion
+### Rejoindre via le lien de la réunion
 
 Si, pour une raison quelconque, vous ne disposez pas du lien direct, vous pouvez toujours essayer de vous joindre à la réunion via un lien direct Zoom ou Teams. Pour participer via le lien de réunion standard :
 1. Visitez Scribe for Meetings.
