--- a/src/content/docs/fr/localization.mdx
+++ b/src/content/docs/fr/localization.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings est actuellement livré avec 6 langues principales, et d'autres seront ajoutées au fil du temps. Si la langue locale de votre système fait partie des langues prises en charge par Scribe for Meetings, l'interface utilisateur utilisera la langue choisie. Notez que le contenu de la présentation sera toujours présenté dans la langue du document original.
 
-## Changer de langue
+### Changer de langue
 
 Scribe for Meetings affiche un bouton de sélection de la langue en bas de l'écran. En cliquant sur ce bouton, une liste de langues s'affiche. Sélectionnez la langue souhaitée, puis cliquez sur le bouton "Changer de langue".
 
