--- a/src/content/docs/fr/makingmeetings.mdx
+++ b/src/content/docs/fr/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Qu'il soit effectué longtemps à l'avance ou quelques minutes avant le début de la réunion, le processus d'installation est rapide et efficace. La procédure de démarrage de la réunion varie légèrement en fonction de votre rôle.
 
-## Si vous êtes l'organisateur
+### Si vous êtes l'organisateur
 
 1. Saisissez le lien d'invitation à la réunion, puis cliquez sur "Go"
 1. Vous arriverez sur une page vous informant que cette réunion n'a pas encore été enregistrée dans Scribe for Meetings. Lorsque l'on vous demande comment procéder, cliquez sur "Cliquez ici si vous êtes l'organisateur de cet événement" Si vous êtes l'organisateur de l'événement, vous pourrez lancer le processus d'enregistrement jusqu'à son terme.
@@ -27,7 +27,7 @@ Qu'il soit effectué longtemps à l'avance ou quelques minutes avant le début d
 1. Quelques minutes après que le participant a cliqué sur le lien et lancé le processus de participation, le Scribe Bot tentera de rejoindre votre réunion. Si vous disposez d'une salle d'attente, vous devrez autoriser manuellement l'entrée du robot dans votre réunion une fois que vous aurez reçu l'alerte de votre plateforme de visioconférence. Dans les deux cas, le Scribe Bot attendra patiemment votre partage d'écran.
 1. Lancez le mode diaporama dans votre programme de présentation, puis partagez la fenêtre du diaporama avec les participants à la réunion. Tous les participants à la réunion dont le navigateur contient Scribe for Meetings commenceront à entendre les diapositives accessibles.
 
-## Si vous n'êtes pas l'organisateur :
+### Si vous n'êtes pas l'organisateur :
 
 Les réunions peuvent être organisées au nom de l'organisateur, qui pourra alors télécharger les diapositives.
 1. Saisissez le lien d'invitation à la réunion, puis cliquez sur "Go"
