--- a/src/content/docs/fr/meetingcontrols.mdx
+++ b/src/content/docs/fr/meetingcontrols.mdx
@@ -9,7 +9,7 @@ Une fois dans la réunion, le contenu des diapositives sera présenté en synchr
 1. Vous entendrez un bip.
 1. Le contenu s'affiche à l'écran et est lu par un lecteur d'écran existant.
 
-## Contrôles et fonctions de la réunion
+### Contrôles et fonctions de la réunion
 
 Scribe for Meetings offre plusieurs moyens de contrôler le rendu. Ces boutons cliquables disposent également de raccourcis clavier faciles à utiliser. Les commandes sont les suivantes :
 * Suspendre la présentation : Met en pause la présentation en direct, en maintenant votre place sur la diapositive actuellement affichée.      
@@ -27,7 +27,7 @@ Scribe for Meetings offre plusieurs moyens de contrôler le rendu. Ces boutons c
 * Télécharger les diapositives : Permet de télécharger les diapositives dans différents formats.
     * Cette option ne s'affiche que si l'organisateur a autorisé le téléchargement des diapositives.
 
-## Téléchargement des diapositives
+### Téléchargement des diapositives
 
 Si l'organisateur a autorisé le téléchargement des diapositives, Scribe for Meetings permet de télécharger les diapositives dans plusieurs formats accessibles. Pour télécharger les diapositives, suivez la procédure ci-dessous :
 1. lorsque vous êtes dans une réunion, activez le lien "Télécharger les diapositives".
@@ -53,7 +53,7 @@ Si l'organisateur a autorisé le téléchargement des diapositives, Scribe for M
 1. Surveillez votre courrier électronique pour le lien de téléchargement. Pour la plupart des formats, l'e-mail arrivera en quelques minutes. La conversion en format audio peut prendre beaucoup plus de temps, en fonction de la longueur du jeu de diapositives, car la synthèse vocale est un processus qui prend plus de temps que les autres conversions.
 1. En cliquant sur le lien, le téléchargement commence instantanément.
 
-## Référence des commandes clavier
+### Référence des commandes clavier
 
 La plupart des navigateurs de bureau peuvent tirer parti des commandes clavier associées à la plupart des fonctions de Scribe For Meetings. Comme ces commandes peuvent varier en fonction de la plate-forme et du navigateur, nous énumérons ci-dessous tous les raccourcis possibles.
 
