--- a/src/content/docs/fr/plans.mdx
+++ b/src/content/docs/fr/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for meetings propose une variété de plans et d'options d'achat à la demande pour les particuliers, les entreprises et les organisations.
 
-## Meeting Pass
+### Meeting Pass
 
 Un laissez-passer pour réunion vous permet d'organiser une seule réunion à l'aide de Scribe for Meetings. Les cartes de réunion n'expirent pas.
 
-## Abonnement individuel
+### Abonnement individuel
 
 Les abonnements individuels permettent à un utilisateur d'organiser un nombre illimité de réunions. Les abonnements individuels sont disponibles avec une facturation mensuelle ou annuelle.
 
-## Abonnement organisationnel
+### Abonnement organisationnel
 
 Les organisations de toute taille peuvent acquérir Scribe for Meetings par le biais d'un abonnement mensuel ou annuel à prix fixe.
