--- a/src/content/docs/fr/welcome.mdx
+++ b/src/content/docs/fr/welcome.mdx
@@ -6,11 +6,11 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Présentation de Scribe for Meetings
+### Présentation de Scribe for Meetings
 
 Scribe for Meetings rend facilement vos partages d'écran Zoom ou Microsoft Teams accessibles aux participants utilisant un lecteur d'écran ou un agrandissement d'écran ! Nous savons que la conformité à l'accessibilité est importante pour vous, en particulier lorsque vous n'êtes pas sûr que votre contenu original est entièrement optimisé pour l'accessibilité. Scribe for Meetings peut facilement rendre vos partages d'écran simultanément disponibles en tant que HTML conforme à WCAG2.1 en seulement 5 minutes.
 
-## Scribe for Meetings est-il facile à utiliser ?
+#### Scribe for Meetings est-il facile à utiliser ?
 
 1. Téléchargez votre jeu de diapositives à l'avance ou 5 minutes avant votre webinaire.
 1. Collez un lien dans la zone de discussion que nous vous fournissons pendant votre réunion (y compris les instructions pour les participants).
@@ -18,7 +18,7 @@ Scribe for Meetings rend facilement vos partages d'écran Zoom ou Microsoft Team
 
 Et c'est parti pour le diaporama !
 
-## Caractéristiques de Scribe For Meetings
+#### Caractéristiques de Scribe For Meetings
 
 * Téléchargez en toute confiance du contenu partagé accessible en seulement 5 minutes avant votre présentation.
 * Aucune application ou logiciel supplémentaire à installer pour créer ou accéder au contenu.
@@ -28,13 +28,13 @@ Et c'est parti pour le diaporama !
 * Les participants peuvent interrompre leur lecture à tout moment pour lire des informations supplémentaires pendant que vous continuez.
 * En un clic, les participants lisent votre présentation à l'aide de leur lecteur d'écran.
 
-## Incroyablement simple, incroyablement puissant.
+#### Incroyablement simple, incroyablement puissant.
 
 Lorsque vous rendez vos partages d'écran accessibles avec Scribe for Meetings, le contenu est affiché dans une fenêtre séparée. Les participants continuent d'avoir un accès complet à la session Zoom ou Microsoft Teams.
 Ils peuvent passer de la réunion Zoom ou Microsoft Teams à votre partage d'écran accessible à tout moment.
 
 Il n'est pas nécessaire de donner des instructions supplémentaires sur la manière d'accéder à votre contenu partagé ou d'interrompre le flux de votre présentation. Les participants liront intuitivement le contenu comme n'importe quelle autre page web.
 
-## Interface de documentation
+### Interface de documentation
 
 Cette documentation comporte des commandes faciles pour passer d'une section à l'autre, ainsi que pour sélectionner la langue dans laquelle lire la documentation.
