--- a/src/content/docs/it/dashboard.mdx
+++ b/src/content/docs/it/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 Scribe for Meetings dispone di un cruscotto basato sul web per facilitare varie attività di gestione di riunioni, account e organizzazioni.
 Va notato che le funzionalità del cruscotto dipendono in larga misura dal fatto che siate utenti o amministratori.
 
-## Gestione delle riunioni
+### Gestione delle riunioni
 
 La sezione dei meeting elenca tutti i meeting, passati e presenti, facilitati da voi e/o dalla vostra organizzazione. Facendo clic su una riunione si apre una pagina di dettagli che consente di:
 * Caricare una presentazione nuova o rivista
@@ -18,25 +18,25 @@ La sezione dei meeting elenca tutti i meeting, passati e presenti, facilitati da
 
 Facendo clic sul link "Elimina" accanto a una riunione, verrà richiesta una conferma e la riunione verrà eliminata dal proprio account.
 
-## Statistiche sulle presenze (admin)
+### Statistiche sulle presenze (admin)
 
 La sezione delle statistiche sulle presenze fornisce un conteggio giornaliero, settimanale, mensile, annuale e di tutti i tempi di tutti gli utenti unici che partecipano alle riunioni utilizzando Scribe for Meetings nell'ambito della vostra organizzazione.
 
-## Predefinite riunioni (admin)
+### Predefinite riunioni (admin)
 
 La pagina Predefiniti riunione, che si trova nel menu Impostazioni, consente di impostare predefiniti globali che persistono in tutte le riunioni. Queste includono:
 * Lingua
 * Preferenza per la descrizione automatica delle immagini
 * Se consentire il download delle diapositive
 
-## Gestione dell'organizzazione (admin)
+### Gestione dell'organizzazione (admin)
 
 Facendo clic sul pulsante "Organizzazione" si accede al link "Membri". Questa pagina consente di aggiungere membri all'organizzazione e di gestire i membri esistenti.
 
-### Aggiunta di membri
+#### Aggiunta di membri
 
 Per aggiungere un membro, è sufficiente inserire il suo indirizzo e-mail nella casella "Indirizzo e-mail", selezionare il suo ruolo nel menu a discesa e fare clic sul pulsante "Aggiungi".
 
-### Gestione degli utenti esistenti
+#### Gestione degli utenti esistenti
 
 Accanto a ciascun utente sono presenti due pulsanti. Uno consente di cambiare il ruolo dell'utente, mentre l'altro lo elimina dall'organizzazione.
