--- a/src/content/docs/it/gettingconnected.mdx
+++ b/src/content/docs/it/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings offre due modi rapidi e indolori per collegarsi alla presentazione accessibile.
 
-## Collegamento tramite link diretto
+### Collegamento tramite link diretto
 
 Simile a un collegamento alla riunione dalla piattaforma di teleconferenza, Scribe for Meetings offre collegamenti diretti per unirsi alla presentazione accessibile. Se ne ricevete uno nell'invito alla riunione o nella chat della riunione, potete fare clic su di esso per aprire immediatamente Scribe for Meetings nel vostro browser web. Una volta fatto clic sul pulsante "Avvia", può accadere una di queste due cose.
 1. Si sentirà un breve segnale acustico, seguito da un messaggio che informa che Scribe for Meetings si sta preparando a fornire l'accesso ai contenuti della riunione.
@@ -19,7 +19,7 @@ Simile a un collegamento alla riunione dalla piattaforma di teleconferenza, Scri
 
 In ogni caso, Scribe for Meetings è pronto per iniziare a presentare le diapositive.
 
-## Partecipazione tramite collegamento alla riunione
+### Partecipazione tramite collegamento alla riunione
 
 Se per qualche motivo non si dispone del collegamento diretto, si può comunque tentare di partecipare tramite un collegamento diretto a Zoom o Teams. Per unirsi tramite il collegamento alla riunione standard:
 1. Visitare Scribe for Meetings.
