--- a/src/content/docs/it/makingmeetings.mdx
+++ b/src/content/docs/it/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Che sia fatto con largo anticipo o a pochi minuti dall'inizio della riunione, il processo di impostazione è rapido ed efficiente. La procedura di avvio della riunione varia leggermente a seconda del ruolo ricoperto.
 
-## Se siete l'organizzatore
+### Se siete l'organizzatore
 
 1. Inserire il link di invito per la riunione, quindi fare clic su "Vai"
 1. Si aprirà una pagina che informa che questa riunione non è ancora stata registrata in Scribe for Meetings. Quando vi viene chiesto come volete procedere, fate clic su "Clicca qui se sei l'organizzatore di questo evento" Se siete l'organizzatore dell'evento, potrete portare a termine il processo di registrazione.
@@ -27,7 +27,7 @@ Che sia fatto con largo anticipo o a pochi minuti dall'inizio della riunione, il
 1. Entro pochi minuti dal momento in cui il partecipante fa clic sul link e avvia il processo di adesione, lo Scribe Bot tenterà di unirsi alla riunione. Se si dispone di una sala d'attesa, è necessario consentire l'ingresso del bot nella riunione manualmente una volta ricevuto l'avviso dalla piattaforma di videoconferenza. In entrambi i casi, Scribe Bot attenderà pazientemente la condivisione della schermata.
 1. Avviate la modalità presentazione nel vostro programma di presentazione, quindi condividete la finestra della presentazione con i partecipanti alla riunione. Tutti i partecipanti alla riunione con Scribe for Meetings caricato nel browser inizieranno ad ascoltare le diapositive accessibili.
 
-## Se non siete l'organizzatore:
+### Se non siete l'organizzatore:
 
 Le riunioni possono essere impostate a nome dell'organizzatore, che potrà quindi caricare le diapositive.
 1. Inserire il link di invito per la riunione, quindi fare clic su "Vai"
