--- a/src/content/docs/it/meetingcontrols.mdx
+++ b/src/content/docs/it/meetingcontrols.mdx
@@ -9,7 +9,7 @@ Una volta all'interno della riunione, il contenuto delle diapositive viene prese
 1. Viene emesso un segnale acustico.
 1. Il contenuto si presenta sullo schermo e viene letto da uno screen reader esistente.
 
-## Controlli e funzioni della riunione
+### Controlli e funzioni della riunione
 
 Scribe for Meetings offre diversi modi per controllare il rendering. Questi pulsanti cliccabili hanno anche scorciatoie da tastiera facili da usare. I controlli includono:
 * Sospendi presentazione: Mette in pausa la presentazione dal vivo, mantenendo il posto alla diapositiva attualmente visualizzata.      
@@ -27,7 +27,7 @@ Scribe for Meetings offre diversi modi per controllare il rendering. Questi puls
 * Scarica le diapositive: Permette di scaricare le diapositive in diversi formati.
     * Questa opzione viene visualizzata solo se l'organizzatore ha consentito il download delle diapositive.
 
-## Scaricare le diapositive
+### Scaricare le diapositive
 
 Se l'organizzatore ha consentito il download delle diapositive, Scribe for Meetings offre la possibilità di scaricare le diapositive in diversi formati accessibili. Per scaricare le diapositive, seguire la seguente procedura:
 1. durante una riunione, attivare il link "Scarica diapositive".
@@ -53,7 +53,7 @@ Se l'organizzatore ha consentito il download delle diapositive, Scribe for Meeti
 1. Tenete d'occhio la vostra e-mail per il link di download. Per la maggior parte dei formati, l'e-mail arriverà entro pochi minuti. La conversione in audio può richiedere molto più tempo, a seconda della lunghezza della presentazione, perché la sintesi vocale è un processo che richiede più tempo rispetto ad altre conversioni.
 1. Facendo clic sul link si avvia immediatamente il download.
 
-## Riferimento ai comandi da tastiera
+### Riferimento ai comandi da tastiera
 
 La maggior parte dei browser desktop può sfruttare i comandi da tastiera associati alla maggior parte delle funzioni di Scribe For Meetings. Poiché questi comandi possono variare a seconda della piattaforma e del browser, di seguito elenchiamo tutte le possibili scorciatoie.
 
