--- a/src/content/docs/it/plans.mdx
+++ b/src/content/docs/it/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for meetings offre una varietà di piani e opzioni di acquisto on-demand per privati, aziende e organizzazioni.
 
-## Meeting Pass
+### Meeting Pass
 
 Un meeting pass consente di condurre una singola riunione utilizzando Scribe for Meetings. I meeting pass non hanno scadenza.
 
-## Abbonamento individuale
+### Abbonamento individuale
 
 Gli abbonamenti individuali consentono a un utente di condurre un numero illimitato di riunioni. Gli abbonamenti individuali sono disponibili in termini di fatturazione mensile e annuale.
 
-## Abbonamento organizzazione
+### Abbonamento organizzazione
 
 Le organizzazioni di qualsiasi dimensione possono acquistare Scribe for Meetings tramite un abbonamento mensile o annuale a prezzo fisso.
