--- a/src/content/docs/it/welcome.mdx
+++ b/src/content/docs/it/welcome.mdx
@@ -6,11 +6,11 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Introduzione a Scribe per le riunioni
+### Introduzione a Scribe per le riunioni
 
 Scribe for Meetings rende facilmente accessibili le condivisioni delle schermate di Zoom o Microsoft Teams ai partecipanti che utilizzano uno screen reader o un ingrandimento dello schermo! Sappiamo che la conformità all'accessibilità è importante per voi, soprattutto quando non siete sicuri che il vostro contenuto originale sia completamente ottimizzato per l'accessibilità. Scribe for Meetings può facilmente rendere le vostre condivisioni dello schermo simultaneamente disponibili come HTML conforme alle WCAG2.1 in soli 5 minuti.
 
-## Quanto è facile usare Scribe for Meetings?
+#### Quanto è facile usare Scribe for Meetings?
 
 1. Caricate la vostra presentazione in anticipo o appena 5 minuti prima del webinar.
 1. Incollate il link nell'area di chat che vi mettiamo a disposizione durante la riunione (include le istruzioni per i partecipanti).
@@ -18,7 +18,7 @@ Scribe for Meetings rende facilmente accessibili le condivisioni delle schermate
 
 E via con la presentazione!
 
-## Caratteristiche di Scribe For Meetings
+#### Caratteristiche di Scribe For Meetings
 
 * Caricate con sicurezza contenuti condivisi accessibili in soli 5 minuti prima della presentazione.
 * Nessuna applicazione o software aggiuntivo da installare per creare o accedere ai contenuti.
@@ -28,13 +28,13 @@ E via con la presentazione!
 * I partecipanti possono mettere in pausa la visualizzazione in qualsiasi momento per leggere ulteriormente mentre voi continuate.
 * Basta un clic e i partecipanti leggono la presentazione con il loro screen reader.
 
-## Incredibilmente semplice, incredibilmente potente.
+#### Incredibilmente semplice, incredibilmente potente.
 
 Quando rendete accessibile la condivisione dello schermo con Scribe for Meetings, il contenuto viene visualizzato in una finestra separata. I partecipanti continuano ad avere pieno accesso alla sessione Zoom o Microsoft Teams.
 I partecipanti possono passare dalla riunione Zoom o Microsoft Teams alla condivisione dello schermo accessibile in qualsiasi momento.
 
 Non è necessario fornire ulteriori istruzioni su come accedere ai contenuti condivisi o interrompere il flusso della presentazione. I partecipanti leggeranno i contenuti in modo intuitivo, come qualsiasi altra pagina web.
 
-## Interfaccia di documentazione
+### Interfaccia di documentazione
 
 La documentazione presenta controlli semplici per spostarsi da una sezione all'altra e per selezionare la lingua in cui leggere la documentazione.
