--- a/src/content/docs/pt/dashboard.mdx
+++ b/src/content/docs/pt/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 O Scribe for Meetings apresenta um painel de controle baseado na Web para facilitar várias tarefas de gerenciamento de reuniões, contas e organizações.
 Deve-se observar que o conjunto de recursos do painel depende muito do fato de você ser um usuário ou um administrador.
 
-## Gerenciamento de reuniões
+### Gerenciamento de reuniões
 
 A seção de reuniões lista todas as reuniões, passadas e presentes, facilitadas por você e/ou pela sua organização. Clicar em uma reunião abre uma página de detalhes que permite a você:
 * Carregar uma apresentação de slides nova ou revisada
@@ -18,25 +18,25 @@ A seção de reuniões lista todas as reuniões, passadas e presentes, facilitad
 
 Clicar no link "Delete" (Excluir) ao lado de uma reunião solicitará confirmação e excluirá a reunião de sua conta.
 
-## Estatísticas de participação (admin)
+### Estatísticas de participação (admin)
 
 A seção de estatísticas de participação fornece uma contagem diária, semanal, mensal, anual e de todos os usuários únicos que participam de reuniões usando o Scribe for Meetings na sua organização.
 
-## Padrões de reunião (admin)
+### Padrões de reunião (admin)
 
 A página Meeting Defaults (Padrões de reunião), localizada no menu Settings (Configurações), permite que você defina padrões globais que persistem em todas as reuniões. Elas incluem:
 * Idioma
 * Preferência de descrição automática da imagem
 * Permitir ou não o download de slides
 
-## Gerenciamento da organização (admin)
+### Gerenciamento da organização (admin)
 
 Clicar no botão "Organization" (Organização) revela um link "Members" (Membros). Essa página permite adicionar membros à organização, bem como gerenciar os membros existentes.
 
-### Adição de membros
+#### Adição de membros
 
 Para adicionar um membro, basta digitar o e-mail dele na caixa "email Address" (endereço de e-mail), selecionar a função dele no menu suspenso e clicar no botão "add" (adicionar).
 
-### Gerenciando usuários existentes
+#### Gerenciando usuários existentes
 
 Ao lado de cada usuário, há dois botões. Um permite que você altere a função do usuário, enquanto o outro o exclui da organização.
