--- a/src/content/docs/pt/gettingconnected.mdx
+++ b/src/content/docs/pt/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 O Scribe for Meetings oferece duas maneiras rápidas e fáceis de se conectar à sua apresentação de slides acessível.
 
-## Conexão via link direto
+### Conexão via link direto
 
 Semelhante a um link de reunião de sua plataforma de teleconferência, o Scribe for Meetings oferece links diretos para participar de sua apresentação de slides acessível. Se você receber um link em seu convite de reunião ou no bate-papo da reunião, poderá clicar nele para abrir instantaneamente o Scribe for Meetings em seu navegador da Web. Quando você clicar no botão "Iniciar", uma das duas coisas poderá acontecer.
 1. Você ouvirá um breve sinal sonoro, seguido de uma mensagem informando que o Scribe for Meetings está se preparando para fornecer acesso ao conteúdo desta reunião.
@@ -19,7 +19,7 @@ Semelhante a um link de reunião de sua plataforma de teleconferência, o Scribe
 
 De qualquer forma, o Scribe for Meetings está pronto para começar a apresentar os slides.
 
-## Como entrar via link de reunião
+### Como entrar via link de reunião
 
 Se, por algum motivo, você não tiver o link direto, ainda poderá tentar ingressar por meio de um link direto do Zoom ou do Teams. Para ingressar por meio do link de reunião padrão:
 1. Visite o Scribe for Meetings.
