--- a/src/content/docs/pt/makingmeetings.mdx
+++ b/src/content/docs/pt/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Seja com bastante antecedência ou poucos minutos antes do início da reunião, o processo de configuração é rápido e eficiente. O procedimento para iniciar a reunião varia um pouco, dependendo de sua função.
 
-## Se você for o organizador
+### Se você for o organizador
 
 1. Digite o link de convite para a reunião e clique em "Go" (Ir)
 1. Você chegará a uma página informando que essa reunião ainda não foi registrada no Scribe for Meetings. Quando lhe for perguntado como você gostaria de proceder, clique em "Click here if you are the organizer of this event" (Clique aqui se você for o organizador deste evento) Como você é o organizador do evento, poderá executar o processo de registro até a conclusão.
@@ -27,7 +27,7 @@ Seja com bastante antecedência ou poucos minutos antes do início da reunião, 
 1. Poucos minutos depois de o participante clicar no link e iniciar o processo de participação, o Scribe Bot tentará entrar em sua reunião. Se você tiver uma sala de espera, precisará permitir a entrada do bot na reunião manualmente assim que receber o alerta da plataforma de videoconferência. Em ambos os casos, o Scribe Bot aguardará pacientemente o seu compartilhamento de tela.
 1. Inicie o modo de apresentação de slides em seu programa de apresentação e compartilhe a janela de apresentação de slides com os participantes da reunião. Todos os participantes da reunião que tiverem o Scribe for Meetings carregado em seus navegadores começarão a ouvir os slides acessíveis.
 
-## Se você não for o organizador:
+### Se você não for o organizador:
 
 As reuniões podem ser configuradas em nome do organizador, que poderá fazer o upload dos slides.
 1. Digite o link de convite para a reunião e clique em "Go" (Ir)
