--- a/src/content/docs/pt/meetingcontrols.mdx
+++ b/src/content/docs/pt/meetingcontrols.mdx
@@ -9,7 +9,7 @@ Uma vez dentro da reunião, o conteúdo do slide será apresentado em sincronia 
 1. Você ouvirá um bipe.
 1. O conteúdo será apresentado na tela e lido por um leitor de tela existente.
 
-## Controles e funções da reunião
+### Controles e funções da reunião
 
 O Scribe for Meetings oferece várias maneiras de controlar a renderização. Esses botões clicáveis também têm atalhos de teclado fáceis de usar. Os controles incluem:
 * Suspender apresentação: Pausa a apresentação ao vivo, mantendo seu lugar no slide exibido no momento.      
@@ -27,7 +27,7 @@ O Scribe for Meetings oferece várias maneiras de controlar a renderização. Es
 * Baixar slides: Permite que você faça o download dos slides em vários formatos diferentes.
     * Essa opção só será exibida se o organizador tiver permitido o download dos slides.
 
-## Download de slides
+### Download de slides
 
 Desde que o organizador tenha permitido o download dos slides, o Scribe for Meetings oferece downloads dos slides em vários formatos acessíveis. Para fazer o download dos slides, siga o procedimento abaixo:
 1. enquanto estiver em uma reunião, ative o link "Download Slides".
@@ -53,7 +53,7 @@ Desde que o organizador tenha permitido o download dos slides, o Scribe for Meet
 1. Fique atento ao seu e-mail para ver o link de download. Para a maioria dos formatos, o e-mail chegará em alguns minutos. A conversão para áudio pode levar muito mais tempo, dependendo da extensão da apresentação de slides, porque a síntese de fala é um processo mais demorado do que outras conversões.
 1. Ao clicar no link, o download será iniciado instantaneamente.
 
-## Referência de comandos de teclado
+### Referência de comandos de teclado
 
 A maioria dos navegadores de desktop pode aproveitar os comandos de teclado associados à maioria das funções do Scribe For Meetings. Como esses comandos podem variar de acordo com a plataforma e o navegador, listaremos todos os atalhos possíveis abaixo.
 
