--- a/src/content/docs/pt/plans.mdx
+++ b/src/content/docs/pt/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 O Scribe for meetings tem uma variedade de planos e opções de compra sob demanda para indivíduos, empresas e organizações.
 
-## Passe de reunião
+### Passe de reunião
 
 Um passe de reunião permite que você conduza uma única reunião usando o Scribe for Meetings. Os passes de reunião não expiram.
 
-## Assinatura individual
+### Assinatura individual
 
 As assinaturas individuais permitem que um usuário conduza uma quantidade ilimitada de reuniões. As assinaturas individuais estão disponíveis em termos de faturamento mensal e anual.
 
-## Assinatura de organização
+### Assinatura de organização
 
 Organizações de qualquer porte podem adquirir o Scribe for Meetings por meio de uma assinatura mensal ou anual de preço fixo.
