--- a/src/content/docs/pt/welcome.mdx
+++ b/src/content/docs/pt/welcome.mdx
@@ -6,11 +6,11 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Apresentando o Scribe para Reuniões
+### Apresentando o Scribe para Reuniões
 
 O Scribe for Meetings torna facilmente seus compartilhamentos de tela do Zoom ou do Microsoft Teams acessíveis aos participantes que usam um leitor de tela ou ampliação de tela! Sabemos que a conformidade com a acessibilidade é importante para você, especialmente quando você não tem certeza se o conteúdo original está totalmente otimizado para acessibilidade. O Scribe for Meetings pode facilmente tornar seus compartilhamentos de tela disponíveis simultaneamente como HTML compatível com WCAG2.1 em apenas 5 minutos.
 
-## Quão fácil é usar o Scribe for Meetings?
+#### Quão fácil é usar o Scribe for Meetings?
 
 1. Faça o upload de seu conjunto de slides com antecedência ou apenas 5 minutos antes do webinar.
 1. Cole um link que fornecemos a você na área de bate-papo durante a reunião (inclui instruções para os participantes).
@@ -18,7 +18,7 @@ O Scribe for Meetings torna facilmente seus compartilhamentos de tela do Zoom ou
 
 E a apresentação de slides continua!
 
-## Recursos do Scribe For Meetings
+#### Recursos do Scribe For Meetings
 
 * Carregue com confiança conteúdo compartilhado acessível em apenas 5 minutos antes da sua apresentação.
 * Não é necessário instalar nenhum aplicativo ou software adicional para criar ou acessar o conteúdo.
@@ -28,13 +28,13 @@ E a apresentação de slides continua!
 * Os participantes podem pausar a visualização a qualquer momento para leitura adicional enquanto você continua.
 * Com um clique, os participantes estarão lendo a sua apresentação usando o leitor de tela.
 
-## Incrivelmente simples, incrivelmente poderoso.
+#### Incrivelmente simples, incrivelmente poderoso.
 
 Quando você torna seus compartilhamentos de tela acessíveis com o Scribe for Meetings, o conteúdo é exibido em uma janela separada. Os participantes continuam a ter acesso total à sessão do Zoom ou do Microsoft Teams.
 Os participantes podem alternar entre a reunião do Zoom ou do Microsoft Teams e o compartilhamento de tela acessível sempre que desejarem.
 
 Não há necessidade de dar instruções adicionais sobre como acessar o conteúdo compartilhado ou interromper o fluxo da sua apresentação. Os participantes lerão o conteúdo intuitivamente, como em qualquer outra página da Web.
 
-## Interface de documentação
+### Interface de documentação
 
 Esta documentação apresenta controles fáceis para passar de uma seção para outra, além de selecionar um idioma para a leitura da documentação.
