--- a/src/content/docs/sv/dashboard.mdx
+++ b/src/content/docs/sv/dashboard.mdx
@@ -8,7 +8,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 Scribe for Meetings har en webbaserad instrumentpanel som underlättar olika uppgifter för hantering av möten, konton och organisationer.
 Det bör noteras att funktionerna i instrumentpanelen till stor del beror på om du är användare eller administratör.
 
-## Möteshantering
+### Möteshantering
 
 I avsnittet Möten listas alla möten, tidigare och nuvarande, som du och/eller din organisation har arrangerat. Om du klickar på ett möte öppnas en detaljsida där du kan göra följande:
 * Ladda upp ett nytt eller reviderat bildspel
@@ -18,25 +18,25 @@ I avsnittet Möten listas alla möten, tidigare och nuvarande, som du och/eller 
 
 Om du klickar på länken "Ta bort" bredvid ett möte kommer du att bli ombedd att bekräfta och sedan ta bort mötet från ditt konto.
 
-## Närvarostatistik (admin)
+### Närvarostatistik (admin)
 
 Avsnittet närvarostatistik ger dig en daglig, veckovis, månadsvis, årlig och alltidsräkning av alla unika användare som deltar i möten med Scribe for Meetings under din organisation.
 
-## Standardinställningar för möten (admin)
+### Standardinställningar för möten (admin)
 
 På sidan Mötesstandarder, som finns under menyn Inställningar, kan du ställa in globala standardvärden som gäller för alla möten. De inkluderar:
 * Språk
 * Inställning för automatisk bildbeskrivning
 * Huruvida nedladdning av bilder ska tillåtas
 
-## Organisationshantering (admin)
+### Organisationshantering (admin)
 
 Om du klickar på knappen "Organisation" visas en länk till "Medlemmar". På den här sidan kan du lägga till medlemmar i organisationen och hantera befintliga medlemmar.
 
-### Lägga till medlemmar
+#### Lägga till medlemmar
 
 För att lägga till en medlem anger du bara dennes e-postadress i rutan "E-postadress", väljer roll i rullgardinsmenyn och klickar sedan på knappen "Lägg till".
 
-### Hantera befintliga användare
+#### Hantera befintliga användare
 
 Bredvid varje användare finns det två knappar. Med den ena kan du byta deras roll, medan den andra raderar dem från organisationen.
