--- a/src/content/docs/sv/makingmeetings.mdx
+++ b/src/content/docs/sv/makingmeetings.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Oavsett om förberedelserna görs i god tid eller inom några minuter efter att mötet har startat går det snabbt och effektivt. Proceduren för att starta mötet kommer att variera något beroende på din roll.
 
-## Om du är organisatör
+### Om du är organisatör
 
 1. Ange inbjudningslänken för mötet och klicka sedan på "Gå"
 1. Du kommer till en sida som informerar dig om att detta möte ännu inte har registrerats i Scribe for Meetings. När du får frågan om hur du vill gå vidare klickar du på "Klicka här om du är arrangör för detta evenemang." Om du är arrangör för evenemanget kommer du att kunna slutföra registreringsprocessen.
@@ -27,7 +27,7 @@ Oavsett om förberedelserna görs i god tid eller inom några minuter efter att 
 1. Inom några minuter efter att deltagaren har klickat på länken och påbörjat anslutningsprocessen kommer Scribe Bot att försöka ansluta sig till ditt möte. Om du har ett väntrum måste du tillåta botens inträde i ditt möte manuellt när du får varningen från din videokonferensplattform. I båda fallen kommer Scribe Bot tålmodigt att invänta din skärmdelning.
 1. Starta bildspelsläget i ditt presentationsprogram och dela sedan bildspelsfönstret med dina mötesdeltagare. Alla mötesdeltagare som har Scribe for Meetings laddat i sin webbläsare kommer att börja höra de tillgängliga bilderna.
 
-## Om du inte är arrangören:
+### Om du inte är arrangören:
 
 Möten kan skapas på uppdrag av arrangören, som då kommer att kunna ladda upp bilderna.
 1. Ange inbjudningslänken för mötet och klicka sedan på "Gå"
