--- a/src/content/docs/sv/meetingcontrols.mdx
+++ b/src/content/docs/sv/meetingcontrols.mdx
@@ -9,7 +9,7 @@ När du är inne i mötet kommer bildinnehållet att presenteras synkroniserat m
 1. Du kommer att höra ett pip.
 1. Innehållet presenteras på skärmen och läses upp av en befintlig skärmläsare.
 
-## Kontroller och funktioner för mötet
+### Kontroller och funktioner för mötet
 
 Scribe for Meetings erbjuder flera sätt att styra renderingen. Dessa klickbara knappar har också lättanvända kortkommandon. Kontrollerna inkluderar:
 * Avbryt presentation: Pausar livepresentationen och håller din plats vid den bild som visas för tillfället.      
@@ -27,7 +27,7 @@ Scribe for Meetings erbjuder flera sätt att styra renderingen. Dessa klickbara 
 * Ladda ner bilder: Låter dig ladda ner bilderna i flera olika format.
     * Detta alternativ visas endast om arrangören har tillåtit nedladdning av bilderna.
 
-## Ladda ner bilder
+### Ladda ner bilder
 
 Förutsatt att arrangören har tillåtit nedladdning av bilder, erbjuder Scribe for Meetings nedladdning av bilderna i flera tillgängliga format. För att ladda ner bilder, följ nedanstående procedur:
 1. när du är i ett möte, aktivera länken "Ladda ner bilder".
@@ -53,7 +53,7 @@ Förutsatt att arrangören har tillåtit nedladdning av bilder, erbjuder Scribe 
 1. Håll utkik efter nedladdningslänken i din e-post. För de flesta format kommer e-postmeddelandet inom några minuter. Konvertering till ljud kan ta mycket längre tid, beroende på längden på bildspelet, eftersom talsyntes är en mer tidskrävande process än andra konverteringar.
 1. Om du klickar på länken påbörjas nedladdningen direkt.
 
-## Referens för tangentbordskommandon
+### Referens för tangentbordskommandon
 
 De flesta webbläsare kan dra nytta av de tangentbordskommandon som är associerade med de flesta funktioner i Scribe For Meetings. Eftersom dessa kommandon kan variera beroende på plattform och webbläsare, kommer vi att lista alla möjliga genvägar nedan.
 
