--- a/src/content/docs/sv/plans.mdx
+++ b/src/content/docs/sv/plans.mdx
@@ -7,14 +7,14 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe för möten har en mängd olika abonnemang och alternativ för köp på begäran för privatpersoner, företag och organisationer.
 
-## Mötespass
+### Mötespass
 
 Med ett mötespass kan du hålla ett enda möte med Scribe for Meetings. Mötespass förfaller inte.
 
-## Individuell prenumeration
+### Individuell prenumeration
 
 Individuella prenumerationer tillåter en användare att genomföra ett obegränsat antal möten. Individuella abonnemang finns tillgängliga för månads- och årsvis fakturering.
 
-## Prenumeration för organisation
+### Prenumeration för organisation
 
 Organisationer av alla storlekar kan förvärva Scribe for Meetings via en månads- eller årsprenumeration till fast pris.
