--- a/src/content/docs/sv/welcome.mdx
+++ b/src/content/docs/sv/welcome.mdx
@@ -6,11 +6,11 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Introduktion till Scribe för möten
+### Introduktion till Scribe för möten
 
 Scribe for Meetings gör enkelt dina Zoom- eller Microsoft Teams-skärmdelningar tillgängliga för deltagare som använder en skärmläsare eller skärmförstoring! Vi vet att tillgänglighet är viktigt för dig, särskilt när du är osäker på om ditt ursprungliga innehåll är helt optimerat för tillgänglighet. Scribe for Meetings kan enkelt göra dina skärmdelningar tillgängliga samtidigt som WCAG2.1-kompatibel HTML på så lite som 5 minuter.
 
-## Hur lätt är Scribe for Meetings att använda?
+#### Hur lätt är Scribe for Meetings att använda?
 
 1. Ladda upp ditt bildspel i förväg eller så lite som 5 minuter före ditt webbinarium.
 1. Klistra in en länk i det chattområde som vi tillhandahåller under ditt möte (innehåller instruktioner för deltagarna).
@@ -18,7 +18,7 @@ Scribe for Meetings gör enkelt dina Zoom- eller Microsoft Teams-skärmdelningar
 
 Och så är det dags för bildspelet!
 
-## Funktioner i Scribe för möten
+#### Funktioner i Scribe för möten
 
 * Ladda upp tillgängligt delat innehåll på så lite som 5 minuter före din presentation.
 * Ingen ytterligare app eller programvara behöver installeras för att skapa eller komma åt innehåll.
@@ -28,13 +28,13 @@ Och så är det dags för bildspelet!
 * Deltagarna kan när som helst pausa sin visning för ytterligare läsning medan du fortsätter.
 * Ett klick och deltagarna läser din presentation med hjälp av sin skärmläsare.
 
-## Otroligt enkelt, Otroligt kraftfullt.
+#### Otroligt enkelt, Otroligt kraftfullt.
 
 När du gör dina skärmdelningar tillgängliga med Scribe for Meetings visas innehållet i ett separat fönster. Deltagarna har fortsatt full åtkomst till Zoom- eller Microsoft Teams-sessionen.
 Deltagarna kan växla fram och tillbaka från Zoom- eller Microsoft Teams-mötet till din tillgängliga skärmdelning när de vill.
 
 Det finns ingen anledning att ge extra instruktioner om hur man kommer åt ditt delade innehåll eller bryta upp flödet i din presentation. Deltagarna kommer intuitivt att läsa innehållet precis som vilken annan webbsida som helst.
 
-## Gränssnitt för dokumentation
+### Gränssnitt för dokumentation
 
 Dokumentationen har enkla kontroller för att flytta från ett avsnitt till ett annat, samt för att välja vilket språk dokumentationen ska läsas på.
