--- a/src/content/docs/de/faq.mdx
+++ b/src/content/docs/de/faq.mdx
@@ -8,19 +8,19 @@ import MacOS from "~/components/platform/MacOS.astro"
 Hier finden Sie Antworten auf einige häufig gestellte Fragen zu Scribe for Meetings. Wenn Sie mit einem Problem konfrontiert werden, beziehen Sie sich bitte wann immer möglich auf dieses Dokument.  
 Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns](https://pneumasolutions.com/contact/), und wir klären alles Weitere mit Ihnen.
 
-## Was ist Scribe for Meetings?
+### Was ist Scribe for Meetings?
 
 Scribe for Meetings ist eine Cloud-basierte Technologie, die eine gemeinsame Präsentation auf Plattformen wie Zoom, Microsoft Teams, Google Meet und anderen in eine barrierefreie Präsentation in Echtzeit für druckgeschädigte Personen umwandelt.
 
-## Wer profitiert von Scribe for Meetings?
+### Wer profitiert von Scribe for Meetings?
 
 Zunächst und vor allem die Millionen von Druckbehinderten, die sonst nicht von den präsentierten Informationen profitieren würden, sowie die Masse der großen und kleinen Unternehmen, Behörden, Bildungseinrichtungen und Organisationen, die wenig über Barrierefreiheit wissen, aber gerne ein erschwingliches Mittel hätten, um ihre Inhalte inklusiver zu gestalten.
 
-## Warum sollte ich Scribe for Meetings anderen Produkten vorziehen?
+### Warum sollte ich Scribe for Meetings anderen Produkten vorziehen?
 
 Wir sind davon überzeugt, dass es kein anderes Produkt gibt, das das, was wir tun, auf die gleiche Weise tut wie wir. Scribe for Meetings ist die erste Technologie ihrer Art, die sich in Echtzeit mit Meeting-Plattformen synchronisiert. Sicherlich werden die Wettbewerber dies zur Kenntnis nehmen und wahrscheinlich ihre Nachahmungen auf den Markt bringen, und wir freuen uns auf den Wettbewerb, aber wenn sie nicht vorhaben, über den Preis zu konkurrieren, sind wir zuversichtlich, dass Sie hier finden, was Sie brauchen.
 
-## Wie funktioniert Scribe for Meetings?
+### Wie funktioniert Scribe for Meetings?
 
 Wenn Sie der Gastgeber sind:
 1. Besuchen Sie [ScribeForMeetings.com,](https://scribeformeetings.com) fügen Sie den Einladungslink für Ihr Meeting ein und drücken Sie "Go".
@@ -32,28 +32,28 @@ Wenn Sie der Gastgeber sind:
 Ihre Inhalte sind innerhalb weniger Minuten einsatzbereit. Es sind keine Kenntnisse in der Erstellung barrierefreier Präsentationen erforderlich. Als Gastgeber müssen Sie keine zusätzliche Software auf Ihrem Gerät ausführen, und die Inhalte können bereits 5 Minuten vor dem Meeting hochgeladen werden.
 Für druckgeschädigte Meeting-Teilnehmer navigieren Sie zu https://www.ScribeForMeetings.com, fügen den Link zu Ihrer Zoom- oder Microsoft Teams-Einladung ein und drücken auf "Los". Alternativ hat Ihnen Ihr Meeting-Gastgeber vielleicht einen direkten Link zu Scribe for Meetings gegeben, entweder in der Einladungs-E-Mail oder im Meeting selbst per Chat. Wie auch immer Sie dorthin gelangen, Sie sind nun bereit, der Präsentation in jedem Webbrowser und auf jeder Plattform zu folgen.
 
-## Wie schwierig ist es, Scribe for Meetings zu installieren?
+### Wie schwierig ist es, Scribe for Meetings zu installieren?
 
 Scribe for Meetings ist keine installierte Anwendung. Es handelt sich um einen Cloud-Service, d. h. Sie benötigen lediglich einen Browser, um an einem Meeting teilzunehmen. Für Moderatoren ist der Prozess, abgesehen vom Hochladen ihrer Inhalte vor dem Meeting, bewusst einfach gehalten. Auf Ihrem Computer oder Gerät muss nichts anderes als Zoom, Microsoft Teams oder ähnliche Meeting-Plattformen installiert werden.
 Unternehmenskunden können Scribe for Meetings auf ihren eigenen Servern hosten. Bitte setzen Sie sich mit uns in Verbindung, um Details zu erfahren.
 
-## Ich sehe einen Teilnehmer mit dem Namen "Scribe for Meetings", der versucht, meinem Meeting beizutreten. Was ist hier los?
+### Ich sehe einen Teilnehmer mit dem Namen "Scribe for Meetings", der versucht, meinem Meeting beizutreten. Was ist hier los?
 
 Das ist der Scribe-Bot. Dieser Bot beobachtet den Bildschirm in Ihrer Besprechung, so dass er sehen kann, welche Folie gerade angezeigt wird, und die barrierefreie Version dieser Folie in Echtzeit für druckgeschädigte Teilnehmer bereitstellen kann. Der Scribe-Bot unterbricht Ihre Besprechung in keiner Weise und sammelt keine anderen Informationen als die, welche Inhalte gerade über die Bildschirmfreigabe angezeigt werden. Wenn Ihr Meeting einen Warteraum hat, lassen Sie den Scribe-Bot bitte sofort in das Meeting ein. Andernfalls wird Scribe for Meetings nicht funktionieren.
 
-## Ich bin ein druckgeschädigter Meeting-Teilnehmer und weiß nicht, ob das Meeting, an dem ich teilnehme, durch Scribe for Meetings registriert wurde. Was kann ich tun?
+### Ich bin ein druckgeschädigter Meeting-Teilnehmer und weiß nicht, ob das Meeting, an dem ich teilnehme, durch Scribe for Meetings registriert wurde. Was kann ich tun?
 
 Gehen Sie zu [ScribeForMeetings.com] (https://scribeformeetings.com), fügen Sie den Link für die Einladung zu Ihrem Meeting bei Zoom oder Microsoft Teams ein und klicken Sie auf "Los". Wenn das Meeting bei Scribe for Meetings registriert wurde, können Sie mit den zugänglichen Folien mitlesen. Wenn nicht, können Sie sich anmelden, um per E-Mail benachrichtigt zu werden, wenn das Meeting bei Scribe for Meetings registriert wurde.
 
-## Ich nehme häufig an Zoom- oder Microsoft Teams-Meetings teil. Wie kann ich am einfachsten herausfinden, ob ein Meeting bei Scribe for Meetings registriert ist, und wenn ja, wie ich die zugänglichen Inhalte anzeigen kann?
+### Ich nehme häufig an Zoom- oder Microsoft Teams-Meetings teil. Wie kann ich am einfachsten herausfinden, ob ein Meeting bei Scribe for Meetings registriert ist, und wenn ja, wie ich die zugänglichen Inhalte anzeigen kann?
 
 Scribe for Meetings verfügt über eine [Erweiterung für Chrome und Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn), die die Verfügbarkeit eines jeden Zoom- oder Microsoft Teams-Meetings, an dem Sie teilnehmen, auf Scribe for Meetings überprüft. Mit einem einzigen Hotkey können Sie die zugänglichen Inhalte anzeigen, wenn das Meeting registriert ist, oder eine Benachrichtigung anfordern, wenn das Meeting später bei Scribe for Meetings registriert wird.
 
-## Ich bin ein druckgeschädigter Meeting-Teilnehmer. Haben Sie irgendwelche Ressourcen, die mir helfen können, den Gastgeber des Meetings zu bitten, Scribe for Meetings zu verwenden?
+### Ich bin ein druckgeschädigter Meeting-Teilnehmer. Haben Sie irgendwelche Ressourcen, die mir helfen können, den Gastgeber des Meetings zu bitten, Scribe for Meetings zu verwenden?
 
 Ja; schauen Sie sich unser [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com) an. Hier finden Sie eine Reihe von vorformulierten Briefen, die Sie personalisieren und dann kopieren und in eine E-Mail einfügen können.
 
-## Kann Scribe for Meetings eine Präsentation in ein zugängliches Dateiformat konvertieren, um sie offline anzusehen?
+### Kann Scribe for Meetings eine Präsentation in ein zugängliches Dateiformat konvertieren, um sie offline anzusehen?
 
 Ja. Bei der Erstellung des Meetings kann der Vortragende optional wählen, ob er seine Präsentation in den folgenden Dateiformaten zum Herunterladen bereitstellen möchte:
 * Eine barrierefreie Webseite mit den gleichen Funktionen wie die Live-Präsentation, einschließlich Vorlesen
@@ -74,7 +74,7 @@ Bei einem Meeting, bei dem diese Funktion aktiviert ist, enthält die Webseite, 
 1. Klicken Sie auf die Schaltfläche "Download vorbereiten".
 1. Warten Sie in Ihrer E-Mail auf den Download-Link. Bei den meisten Formaten wird die E-Mail innerhalb weniger Minuten eintreffen. Die Umwandlung in ein Audioformat kann je nach Länge des Foliendokuments wesentlich länger dauern, da die Sprachsynthese ein zeitaufwändigerer Prozess ist als andere Umwandlungen.
 
-## Ich veranstalte viele Meetings und möchte meinen Teilnehmern die Möglichkeit geben, die Folien für all diese Meetings herunterzuladen. Kann ich diese Funktion standardmäßig einschalten?
+### Ich veranstalte viele Meetings und möchte meinen Teilnehmern die Möglichkeit geben, die Folien für all diese Meetings herunterzuladen. Kann ich diese Funktion standardmäßig einschalten?
 
 Ja. Gehen Sie wie folgt vor:
 1. 
@@ -83,60 +83,60 @@ Gehen Sie zu ScribeForMeetings.com.
 1. Klicken Sie auf "Einstellungen" und dann auf "Meeting Defaults".
 1. Aktivieren Sie das Kontrollkästchen "Teilnehmer dürfen zugängliche Versionen der Folien herunterladen" und klicken Sie dann auf "Speichern".
 
-## Ich möchte meine Folien vor unbefugtem Kopieren und Verteilen schützen. Unterstützt Scribe for Meetings dies?
+### Ich möchte meine Folien vor unbefugtem Kopieren und Verteilen schützen. Unterstützt Scribe for Meetings dies?
 
 Leider kann Scribe for Meetings nicht verhindern, dass Ihre Teilnehmer den Text Ihrer Folien kopieren. Wenn Sie jedoch nicht zulassen, dass die Folien heruntergeladen werden können, wird es für die Teilnehmer nicht einfach sein, Ihre Folien zu kopieren, da sie jeweils eine einzelne Folie kopieren müssen. Beachten Sie auch, dass sich dies in der Praxis nicht von dem unterscheidet, was jeder Teilnehmer bereits tun kann, indem er Screenshots Ihrer Folien anfertigt.
 
-## Ist Scribe for Meetings mehrsprachig?
+### Ist Scribe for Meetings mehrsprachig?
 
 Ja, Scribe for Meetings kann Inhalte in 140 Sprachen wiedergeben, ohne dass der Vortragende einen zusätzlichen Aufwand betreiben muss.
 
-## Muss ich meine Präsentation verlangsamen, um sicherzustellen, dass die Teilnehmer mit Lese- und Schreibschwäche mithalten können?
+### Muss ich meine Präsentation verlangsamen, um sicherzustellen, dass die Teilnehmer mit Lese- und Schreibschwäche mithalten können?
 
 Nein. Scribe for Meetings verfügt über eine Funktion namens Dynamic Visual Representation, kurz DVR-Modus, mit der Teilnehmer mit Sehbehinderungen Ihre barrierefreien Folien in ihrem eigenen Tempo lesen können. Ein Teilnehmer kann die Live-Präsentation unterbrechen, zu einer bereits gelesenen Folie zurückkehren, in seinem eigenen Tempo vorwärts gehen und dann mit der Live-Präsentation fortfahren, wenn er bereit ist.
 Um den DVR-Modus zu verwenden, muss der Teilnehmer entweder auf die Schaltfläche "Präsentation unterbrechen" oder auf die Schaltfläche "Vorherige Folie" klicken. Diese Schaltflächen sind für Benutzer von Bildschirmlesegeräten und für Mausbenutzer, die mit dem Mauszeiger über sie fahren, entsprechend gekennzeichnet. Sie befinden sich am unteren Rand der Seite und sehen aus wie die Schaltflächen "Pause" und "Vorheriger Titel" in einem Media-Player. Wenn der Benutzer eine dieser Schaltflächen drückt, wird die Live-Präsentation angehalten, und bei der Schaltfläche "Vorherige Folie" wird zur vorherigen Folie zurückgekehrt. Mit den Schaltflächen Vorheriges Dia und Nächstes Dia kann der Benutzer dann in seinem eigenen Tempo durch die Folien gehen, und mit der Schaltfläche Live gehen kann er zur Live-Präsentation zurückkehren. Diese Schaltflächen sehen aus wie die Schaltflächen Vorheriges Stück, Nächstes Stück und Abspielen in einem Media Player.  
 Beachten Sie, dass die Teilnehmer im DVR-Modus nur die Folien ansehen können, die gezeigt wurden, seit sie der Präsentation beigetreten sind. Wenn ein Teilnehmer mit einer Sehbehinderung zu spät zu Ihrer Präsentation kommt, hat er dieselben Folien verpasst wie jeder andere Teilnehmer, der zu spät kommt.
 
-## Ich habe einen Teilnehmer mit einer Sehbehinderung, der davon profitieren würde, dass meine Inhalte vorgelesen werden, der aber nicht mit einem Bildschirmlesegerät umgehen kann. Kann Scribe for Meetings dabei helfen?
+### Ich habe einen Teilnehmer mit einer Sehbehinderung, der davon profitieren würde, dass meine Inhalte vorgelesen werden, der aber nicht mit einem Bildschirmlesegerät umgehen kann. Kann Scribe for Meetings dabei helfen?
 
 Ja. Unsere Vorlesefunktion spricht Ihre Folien mit den Stimmen des Geräts und des Webbrowsers des Teilnehmers und zeichnet dabei einen Rahmen um jedes gesprochene Wort, damit der Teilnehmer dem Text visuell folgen kann. Für Windows-Benutzer empfehlen wir den Microsoft Edge-Browser für diese Funktion, da Edge kostenlos hervorragende Stimmen in mehreren Sprachen bietet. Diese Funktion funktioniert jedoch auch mit allen anderen wichtigen Plattformen und Browsern, einschließlich mobiler Geräte.  
 Um das Vorlesen der aktuellen Folie zu starten, drücken Sie auf die Schaltfläche Vorlesen, die sich am unteren Rand des Bildschirms befindet und wie ein Lautsprecher aussieht. Während Scribe for Meetings die Folie vorliest, werden Steuerelemente zum Anhalten des Vorlesens (die Schaltfläche mit dem quadratischen Symbol), zum Anhalten oder Fortsetzen, zum Zurück- oder Vorspulen (die Schaltflächen, die wie die Schaltflächen "Vorheriger Titel" und "Nächster Titel" in einem Media-Player aussehen), zum Beschleunigen und Verlangsamen des Vorlesens oder zum Ändern der Stimme angezeigt. Diese Steuerelemente werden ausgeblendet, sobald die Lektüre beendet ist oder der Benutzer sie anhält.  
 Beachten Sie, dass der Vorlese- und der DVR-Modus (siehe oben) zusammen verwendet werden können, damit Teilnehmer mit einer Lesebehinderung die Folien auf ihre eigene Weise und in ihrem eigenen Tempo lesen können.
 
-## Ich habe einen sehbehinderten Teilnehmer, der meine Folien in einer großen Schrift benötigt, aber kein Vollbildvergrößerungsprogramm benötigt. Kann Scribe for Meetings dabei helfen?
+### Ich habe einen sehbehinderten Teilnehmer, der meine Folien in einer großen Schrift benötigt, aber kein Vollbildvergrößerungsprogramm benötigt. Kann Scribe for Meetings dabei helfen?
 
 Ja. Scribe for Meetings zeigt Ihre Folien so an, dass sie für Teilnehmer mit allen Arten von Inhaltsanforderungen zugänglich sind. Wenn große Schriftarten benötigt werden, kann ein Teilnehmer die Seitenvergrößerungsfunktion seines Browsers nutzen, um die Schriftgröße der Folien anzupassen, ohne dass der Benutzer ständig hin- und herblättern muss. Scribe for Meetings zeigt den Text auch automatisch in dem vom Benutzer bevorzugten Farbschema an, sei es das übliche Dunkel-auf-Hell, Hell-auf-Dunkel (auch bekannt als Dunkelmodus) oder ein benutzerdefiniertes Schema.  
 
-## Moment mal, was ist hier los? Warum sehen meine Folien in Scribe for Meetings so anders aus als in meiner Präsentation?
+### Moment mal, was ist hier los? Warum sehen meine Folien in Scribe for Meetings so anders aus als in meiner Präsentation?
 
 Jeder Aspekt der Darstellung Ihrer Folien in Scribe for Meetings ist für die Barrierefreiheit optimiert, für Teilnehmer mit allen Arten von Druckbehinderungen. Da Scribe for Meetings als Ergänzung zu Ihrer bestehenden Meeting-Plattform gedacht ist, können die Teilnehmer jederzeit zum Hauptfenster des Meetings zurückblättern, um die Folien so zu sehen, wie sie in Ihrer Präsentation ohne Barrierefreiheit angezeigt werden.
 
-## Ich verwende kein PowerPoint. Kann ich meine Präsentation trotzdem mit Scribe for Meetings zugänglich machen?
+### Ich verwende kein PowerPoint. Kann ich meine Präsentation trotzdem mit Scribe for Meetings zugänglich machen?
 
 Scribe for Meetings kann Ihre gemeinsam genutzten Folien zugänglich machen, unabhängig davon, welche Anwendung Sie für die Präsentation verwenden, solange Sie Ihr Foliendokument im PowerPoint-Format bereitstellen können. Andere Präsentationsanwendungen wie Keynote und Google Slides können ihre Foliendateien in das PowerPoint-Format konvertieren, so dass Sie diese mit Scribe for Meetings verwenden können.
 
-## Scribe for Meetings zeigt während der Präsentation nicht die zugänglichen Versionen meiner Folien an, oder es überspringt einige Folien. Was ist das Problem?
+### Scribe for Meetings zeigt während der Präsentation nicht die zugänglichen Versionen meiner Folien an, oder es überspringt einige Folien. Was ist das Problem?
 
 Vergewissern Sie sich, dass Sie Ihre Folien in einer bildschirmfüllenden Diashow präsentieren und dass Sie die Bildschirmfreigabe von Zoom oder Microsoft Teams eingerichtet haben, um diese Diashow mit Ihrem Publikum zu teilen. Wenn Sie PowerPoint für Windows verwenden, um Ihre Präsentation auszuführen, drücken Sie nach dem Öffnen von PowerPoint die Taste F5, um den Diashow-Modus zu aktivieren.
 [Erfahren Sie mehr über die Verwendung der Zoom-Bildschirmfreigabe mit PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
 [Erfahren Sie, wie Sie die Bildschirmfreigabe von Microsoft Teams mit PowerPoint nutzen können] (https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## Wie behandelt Scribe for Meetings Bilder und Grafiken in meinen Folien?
+### Wie behandelt Scribe for Meetings Bilder und Grafiken in meinen Folien?
 
 Wenn Sie bereits Beschreibungen (auch bekannt als Alt-Tags oder Bildunterschriften) für die grafischen Inhalte in Ihren Folien geschrieben haben, wird Scribe for Meetings diese verwenden. Andernfalls nutzt Scribe for Meetings einen Cloud-basierten Bildbeschreibungsdienst, der auf maschinellem Lernen basiert, um automatisch Alt-Tags für Ihre Grafiken hinzuzufügen. Wenn diese Bilder Text enthalten, verwendet Scribe for Meetings auch optische Zeichenerkennung (OCR), um diesen Text zugänglich zu machen.
 
-## Meine Folien enthalten Tabellen, Diagramme oder andere komplexe Grafiken. Kann Scribe for Meetings diese verarbeiten?
+### Meine Folien enthalten Tabellen, Diagramme oder andere komplexe Grafiken. Kann Scribe for Meetings diese verarbeiten?
 
 Die kurze Antwort lautet: In den meisten Fällen nicht. Daran arbeiten wir noch. Da die Scribe Augmented Document Remediation Plattform auf maschinellem Lernen basiert, werden wir, sobald wir mehr Dokumente und Foliendokumente mit komplexen Grafiken erhalten, in der Lage sein, unser Modell zu trainieren, um diese Grafiken zugänglich zu machen. Aber im Moment müssen Sie es einfach ausprobieren und sehen.
 
-## Funktioniert Scribe for Meetings auch mit anderen Meeting-Plattformen als Zoom und Microsoft Teams, wie Jitsi Meet, Google Meet, Slack, Amazon Chime oder BlueJeans?
+### Funktioniert Scribe for Meetings auch mit anderen Meeting-Plattformen als Zoom und Microsoft Teams, wie Jitsi Meet, Google Meet, Slack, Amazon Chime oder BlueJeans?
 
 Noch nicht, aber das wird bald der Fall sein.
 
-## Wie melden sich Personen innerhalb unserer Organisation bei Scribe for Meetings an?
+### Wie melden sich Personen innerhalb unserer Organisation bei Scribe for Meetings an?
 
 Scribe for Meetings unterstützt derzeit zwei Optionen für die Authentifizierung. Die einfachste Option ist unser E-Mail-basierter Anmeldeprozess. Geben Sie einfach Ihre E-Mail-Adresse ein, und wir senden Ihnen einen Link, mit dem Sie sich anmelden können; ein Passwort ist nicht erforderlich. Für Organisationen mit strengeren Sicherheitsanforderungen können wir auch Single Sign-On (SSO)-Systeme integrieren, die den SAML-Standard implementieren, entweder über den [InCommon](https://www.incommon.org/)-Verbund oder durch bilateralen Metadatenaustausch. Unser SAML-Dienstanbieter verwendet das Open-Source-Paket Shibboleth SP und wurde in Zusammenarbeit mit [Signet, Inc.](https://www.signet.id/) implementiert, einem Unternehmen für Identitätsmanagement und Zugriffskontrolle, das von einem Architekten von Shibboleth gegründet wurde. Beachten Sie, dass wir SSO durch eine Vielzahl von Identitätsanbietern unterstützen; zusätzlich zu Shibboleth IdP haben wir mit Azure Active Directory getestet. Wenn sich Ihre Organisation bei Scribe for Meetings anmeldet, bieten wir SSO-Onboarding an, das durch die Einrichtungsgebühr abgedeckt ist.
 
-## Wie sieht die Zukunft von Scribe for Meetings aus?
+### Wie sieht die Zukunft von Scribe for Meetings aus?
 
 Scribe, die Plattform hinter unserer Scribe-Produktlinie, lernt aktiv bei jeder Verarbeitung eines Dokuments. Die auf maschinellem Lernen basierende Augmented Document Remediation-Technologie wird mit jeder Seite intelligenter und bringt uns der 100-prozentigen Genauigkeit ein großes Stück näher. Diese Vorteile wirken sich auf alle unsere Produkte aus und machen Scribe for Meetings zu einer Anwendung, die immer besser wird, je öfter Sie sie verwenden.
