--- a/src/content/docs/de/localization.mdx
+++ b/src/content/docs/de/localization.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings wird derzeit mit 6 Hauptsprachen ausgeliefert, weitere werden im Laufe der Zeit hinzugefügt. Wenn Ihr Systemgebietsschema zu den von Scribe for Meetings unterstützten Sprachen gehört, wird die Benutzeroberfläche in der von Ihnen gewählten Sprache angezeigt. Beachten Sie, dass der Inhalt der Präsentation weiterhin in der Sprache des Originaldokuments angezeigt wird.
 
-## Umschalten der Sprache
+### Umschalten der Sprache
 
 Scribe for Meetings zeigt am unteren Rand des Bildschirms eine Schaltfläche zur Sprachauswahl an. Wenn Sie auf diese Schaltfläche klicken, wird eine Liste mit Sprachen angezeigt. Wählen Sie die gewünschte Sprache aus und klicken Sie dann auf die Schaltfläche "Sprache wechseln".
 
