--- a/src/content/docs/en/welcome.mdx
+++ b/src/content/docs/en/welcome.mdx
@@ -6,11 +6,11 @@ import Windows from "~/components/platform/Windows.astro"
 import MacOS from "~/components/platform/MacOS.astro"
 
 Copyright © 2023 [Pneuma Solutions](https://www.pneumasolutions.com)  
-## Introducing Scribe for Meetings
+### Introducing Scribe for Meetings
 
 Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares accessible to participants using a screen reader or screen magnification! We know accessibility compliance is important to you, especially when you’re unsure if your original content is fully optimized for accessibility. Scribe for Meetings can easily make your screen shares simultaneously available as WCAG2.1 compliant HTML in as little as 5-minutes.
 
-## How easy is Scribe for Meetings to use?
+#### How easy is Scribe for Meetings to use?
 
 1. Upload your slide deck in advance or as little as 5-minutes before your webinar.
 1. Paste a link we provide you in the chat area during your meeting (includes participant instructions).
@@ -18,7 +18,7 @@ Scribe for Meetings easily makes your Zoom or Microsoft Teams screen shares acce
 
 And it’s on with the slide show!
 
-## Scribe For Meetings features
+#### Scribe For Meetings features
 
 * Confidently upload accessible shared content in as little as 5-minutes before your presentation.
 * No additional app or software to install to create or access content.
@@ -28,13 +28,13 @@ And it’s on with the slide show!
 * Participants can pause their view anytime for additional reading while you continue on.
 * One click and attendees are reading your presentation using their screen reader.
 
-## Amazingly simple, Incredibly powerful.
+#### Amazingly simple, Incredibly powerful.
 
 When you make your screen shares accessible with Scribe for Meetings, the content is displayed in a separate window. Participants continue to have full access to the Zoom or Microsoft Teams session.
 Attendees can switch back and forth from the Zoom or Microsoft Teams meeting to your accessible screen share anytime they want.
 
 There is no need to give extra instructions on how to access your shared content or break up the flow of your presentation. Participants will intuitively read content just like any other web page.
 
-## Documentation Interface
+### Documentation Interface
 
 This documentation features easy controls for moving from one section to another, as well as selecting a language to read the documentation in.
