--- a/src/content/docs/sv/faq.mdx
+++ b/src/content/docs/sv/faq.mdx
@@ -8,19 +8,19 @@ import MacOS from "~/components/platform/MacOS.astro"
 Här hittar du svar på några vanliga frågor om Scribe for Meetings. När du ställs inför ett problem, vänligen hänvisa till detta dokument när det är möjligt.  
 Ser du inte din fråga? [Kontakta oss](https://pneumasolutions.com/contact/), så hjälper vi dig att komma igång.
 
-## Vad är Scribe för möten?
+### Vad är Scribe för möten?
 
 Scribe for Meetings är en molnbaserad teknik som tar en delad presentation på plattformar som Zoom, Microsoft Teams, Google Meet och andra och gör den till en tillgänglig presentation i realtid för personer med nedsatt skrivförmåga.
 
-## Vem drar nytta av Scribe for Meetings?
+### Vem drar nytta av Scribe for Meetings?
 
 Först och främst de miljontals personer med nedsatt skrivförmåga som annars inte skulle kunna ta del av den information som presenteras, och massorna av stora och små företag, myndigheter, alla utbildningsnivåer och organisationer som vet lite om tillgänglighet men som vill ha ett prisvärt sätt att göra sitt innehåll mer inkluderande.
 
-## Varför ska jag välja Scribe for Meetings framför andra produkter?
+### Varför ska jag välja Scribe for Meetings framför andra produkter?
 
 Vi är övertygade om att det inte finns något annat som gör det vi gör på samma sätt som vi gör det. Scribe for Meetings är den första tekniken i sitt slag som synkroniserar med mötesplattformar i realtid. Visst, konkurrenterna kommer att notera detta och sannolikt lansera sina imitationer, och vi ser fram emot konkurrensen, men om de inte planerar att konkurrera med priset känner vi oss övertygade om att du kommer att hitta vad du behöver här.
 
-## Hur fungerar Scribe for Meetings?
+### Hur fungerar Scribe for Meetings?
 
 Om du är värd:
 1. Besök [ScribeForMeetings.com,](https://scribeformeetings.com) klistra in inbjudningslänken för ditt möte och tryck på "Go".
@@ -32,28 +32,28 @@ Om du är värd:
 Ditt innehåll kommer att vara redo att lanseras inom några minuter. Det krävs ingen kunskap om att skapa tillgängliga presentationer. Som värd behöver du inte köra någon extra programvara på din enhet, och innehållet kan laddas upp så kort tid som 5 minuter före mötet.
 För mötesdeltagare med nedsatt skrivförmåga går du till https://www.ScribeForMeetings.com, klistrar in länken till din Zoom- eller Microsoft Teams-inbjudan och trycker på "Go". Alternativt kan din mötesvärd ha gett dig en direktlänk till Scribe for Meetings, antingen i e-postinbjudan eller i själva mötet via chatten. Oavsett hur du kommer dit är du nu redo att följa med i presentationen i vilken webbläsare som helst på vilken plattform som helst.
 
-## Hur svårt är det att installera Scribe for Meetings?
+### Hur svårt är det att installera Scribe for Meetings?
 
 Scribe for Meetings är inte en installerad applikation. Det är en molntjänst, så inget mer än en webbläsare behövs för att njuta av ett möte. För presentatörer, förutom att ladda upp sitt innehåll före mötet, var processen avsiktligt utformad för att vara enkel. Det finns inget att installera på din dator eller enhet annat än Zoom, Microsoft Teams eller liknande mötesplattformar.
 Företagskunder kan hosta Scribe for Meetings på sina egna servrar. Vänligen kontakta oss för mer information.
 
-## Jag ser en deltagare som heter "Scribe for Meetings" som försöker gå med i mitt möte. Vad är det som händer?
+### Jag ser en deltagare som heter "Scribe for Meetings" som försöker gå med i mitt möte. Vad är det som händer?
 
 Det är Scribe-boten. Denna bot tittar på skärmen i ditt möte, så att den kan se vilken bild som för närvarande visas och tillhandahålla den tillgängliga versionen av den bilden i realtid till deltagare med nedsatt skrivförmåga. Scribe-boten stör inte mötet på något sätt och den samlar inte in någon annan information än vilket innehåll som för närvarande visas via skärmdelning. Om ditt möte har ett väntrum ska du omedelbart släppa in Scribe-boten i mötet. Annars kommer Scribe för möten inte att fungera.
 
-## Jag är en mötesdeltagare med nedsatt skrivförmåga och jag vet inte om mötet jag deltar i har registrerats via Scribe for Meetings. Vad kan jag göra?
+### Jag är en mötesdeltagare med nedsatt skrivförmåga och jag vet inte om mötet jag deltar i har registrerats via Scribe for Meetings. Vad kan jag göra?
 
 Gå till [ScribeForMeetings.com](https://scribeformeetings.com), klistra in Zoom- eller Microsoft Teams-inbjudningslänken för ditt möte och tryck på "Go". Om mötet har registrerats med Scribe for Meetings är du redo att följa med i tillgängliga bilder. Om inte, kan du registrera dig för att få ett e-postmeddelande när mötet har registrerats med Scribe for Meetings.
 
-## Jag deltar ofta i Zoom- eller Microsoft Teams-möten. Vad är det enklaste sättet för mig att ta reda på om ett möte är registrerat med Scribe for Meetings, och om det är så, visa det tillgängliga innehållet?
+### Jag deltar ofta i Zoom- eller Microsoft Teams-möten. Vad är det enklaste sättet för mig att ta reda på om ett möte är registrerat med Scribe for Meetings, och om det är så, visa det tillgängliga innehållet?
 
 Scribe for Meetings har ett [tillägg för Chrome och Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) som kontrollerar tillgängligheten i Scribe for Meetings för alla Zoom- eller Microsoft Teams-möten som du deltar i. Med en enda snabbtangent kan du visa det tillgängliga innehållet om mötet är registrerat, eller begära ett uppföljningsmeddelande om mötet registreras i Scribe for Meetings senare.
 
-## Jag är en mötesdeltagare med nedsatt skrivförmåga. Har du några resurser som kan hjälpa mig att be mötesvärden att använda Scribe for Meetings?
+### Jag är en mötesdeltagare med nedsatt skrivförmåga. Har du några resurser som kan hjälpa mig att be mötesvärden att använda Scribe for Meetings?
 
 Ja, kolla in vårt [Scribe for Meetings Self-Advocacy Kit] (https://sak.scribeformeetings.com). Här hittar du en mängd förskrivna brev som du kan anpassa och sedan kopiera och klistra in i ett e-postmeddelande.
 
-## Kan Scribe for Meetings konvertera en presentation till tillgängliga filformat för offlinevisning?
+### Kan Scribe for Meetings konvertera en presentation till tillgängliga filformat för offlinevisning?
 
 Ja, det går. När mötet skapas kan presentatören välja att tillhandahålla sin presentation för nedladdning i följande filformat:
 * En tillgänglig webbsida, med alla samma funktioner som livepresentationen, inklusive uppläst text
@@ -74,7 +74,7 @@ För ett möte där denna funktion är aktiverad, så snart presentatören har v
 1. Klicka på knappen "Förbered nedladdning".
 1. Håll utkik efter nedladdningslänken i din e-post. För de flesta format kommer e-postmeddelandet inom några minuter. Konvertering till ljud kan ta mycket längre tid, beroende på hur långt bildspelet är, eftersom talsyntes är en mer tidskrävande process än andra konverteringar.
 
-## Jag är värd för många möten och jag vill låta mina deltagare ladda ner bilderna för alla dessa möten. Kan jag aktivera den här funktionen som standard?
+### Jag är värd för många möten och jag vill låta mina deltagare ladda ner bilderna för alla dessa möten. Kan jag aktivera den här funktionen som standard?
 
 Ja, det kan du. Följ dessa steg:
 1. 
@@ -83,60 +83,60 @@ Gå till ScribeForMeetings.com.
 1. Klicka på "Inställningar" och sedan på "Standardinställningar för möten".
 1. Markera kryssrutan som heter "Tillåt deltagare att ladda ner tillgängliga versioner av bilder" och klicka sedan på "Spara".
 
-## Jag vill skydda mina bilder från obehörig kopiering och distribution. Har Scribe for Meetings stöd för detta?
+### Jag vill skydda mina bilder från obehörig kopiering och distribution. Har Scribe for Meetings stöd för detta?
 
 Tyvärr kan Scribe for Meetings inte hindra dina deltagare från att kopiera texten i dina bilder. Men om du inte tillåter att bilderna laddas ner kommer det inte att vara lätt för deltagarna att kopiera dina bilder, eftersom de måste kopiera en bild i taget. Observera också att detta i praktiken inte skiljer sig från vad alla deltagare redan kan göra genom att ta skärmdumpar av dina bilder.
 
-## Är Scribe for Meetings flerspråkigt?
+### Är Scribe for Meetings flerspråkigt?
 
 Ja, Scribe for Meetings kan återge innehåll på 140 språk, återigen utan extra ansträngning från presentatören.
 
-## Måste jag sakta ner min presentation för att se till att deltagare med läs- och skrivsvårigheter kan hänga med?
+### Måste jag sakta ner min presentation för att se till att deltagare med läs- och skrivsvårigheter kan hänga med?
 
 Nej. Scribe for Meetings har en funktion som kallas Dynamic Visual Representation, förkortat DVR-läge, som gör att deltagare med nedsatt syn kan läsa dina tillgängliga bilder i sin egen takt. En deltagare kan pausa livepresentationen, gå tillbaka till en bild som de redan har läst, gå framåt i sin egen takt och sedan fortsätta med livepresentationen när de är redo.
 För att använda DVR-läget ska deltagaren trycka på antingen knappen Avbryt presentation eller knappen Föregående bild. Dessa knappar är märkta som sådana för skärmläsaranvändare och för musanvändare som håller muspekaren över dem. Visuellt finns de längst ner på sidan och ser ut som knapparna Paus och Föregående spår i en mediaspelare. När användaren trycker på någon av dessa knappar pausas livepresentationen, och för knappen Föregående bild återgår den till föregående bild. Användaren kan sedan använda knapparna Föregående bild och Nästa bild för att gå igenom bilderna i sin egen takt, och knappen Gå live för att återgå till livepresentationen. Dessa knappar ser ut som knapparna Föregående spår, Nästa spår och Spela upp i en mediaspelare.  
 Observera att DVR-läget endast tillåter deltagare att granska bilder som har visats sedan de gick med i presentationen. Om en deltagare med nedsatt skrivförmåga är sen till din presentation missar de samma bilder som alla andra sena deltagare skulle ha missat.
 
-## Jag har en deltagare med läs- och skrivsvårigheter som skulle ha nytta av att få mitt innehåll uppläst men som inte är bekväm med en skärmläsare. Kan Scribe for Meetings hjälpa till?
+### Jag har en deltagare med läs- och skrivsvårigheter som skulle ha nytta av att få mitt innehåll uppläst men som inte är bekväm med en skärmläsare. Kan Scribe for Meetings hjälpa till?
 
 Ja, det kan vi. Vår högläsningsfunktion läser upp dina bilder med de röster som tillhandahålls av din användares enhet och webbläsare, samtidigt som en ruta ritas runt varje ord när det läses upp för att hjälpa användaren att följa med visuellt. För Windows-användare rekommenderar vi Microsoft Edge för den här funktionen, eftersom Edge erbjuder enastående röster på flera språk, kostnadsfritt. Funktionen fungerar dock även med alla andra större plattformar och webbläsare, inklusive mobila enheter.  
 För att börja läsa den aktuella bilden högt trycker du på knappen Läs högt, som finns längst ner på skärmen och ser ut som en högtalare. Medan Scribe for Meetings läser upp bilden visas kontroller för att stoppa läsningen (knappen med en fyrkantig ikon), pausa eller återuppta, gå bakåt eller framåt (knapparna som ser ut som knapparna Föregående spår och Nästa spår i en mediaspelare), snabba upp och sakta ner läsningen eller ändra rösten. Dessa kontroller försvinner så snart läsningen är klar eller så snart användaren stoppar den.  
 Observera att Högläsning och DVR-läge (se ovan) kan användas tillsammans, så att deltagare med nedsatt läsförmåga kan läsa bilderna både på sitt eget sätt och i sin egen takt.
 
-## Jag har en deltagare med nedsatt skrivförmåga som behöver mina bilder i ett stort typsnitt men inte behöver ett förstoringsprogram för hela skärmen. Kan Scribe for Meetings hjälpa till?
+### Jag har en deltagare med nedsatt skrivförmåga som behöver mina bilder i ett stort typsnitt men inte behöver ett förstoringsprogram för hela skärmen. Kan Scribe for Meetings hjälpa till?
 
 Ja, Scribe for Meetings visar dina bilder på ett sätt som gör dem tillgängliga för deltagare med alla typer av innehållskrav. Om stora teckensnitt behövs kan en deltagare använda webbläsarens sidzoomfunktion för att justera teckenstorleken på bilderna, utan att användaren behöver scrolla fram och tillbaka hela tiden. Scribe for Meetings visar också automatiskt texten i det färgschema som användaren föredrar, oavsett om det är det vanliga mörk-på-ljus, ljus-på-mörk (även känt som mörkt läge) eller ett anpassat schema.  
 
-## Vänta! Vad är det som händer här? Varför ser mina bilder så annorlunda ut i Scribe for Meetings än de gör i min presentation?
+### Vänta! Vad är det som händer här? Varför ser mina bilder så annorlunda ut i Scribe for Meetings än de gör i min presentation?
 
 Varje aspekt av hur Scribe for Meetings visar dina bilder är optimerad för tillgänglighet, för deltagare med alla typer av trycksvårigheter. Eftersom Scribe for Meetings är tänkt att användas tillsammans med din befintliga mötesplattform kan deltagarna alltid gå tillbaka till huvudfönstret för att se bilderna som de visas i din presentation utan tillgänglighet.
 
-## Jag använder inte PowerPoint. Kan jag ändå göra min presentation tillgänglig med Scribe for Meetings?
+### Jag använder inte PowerPoint. Kan jag ändå göra min presentation tillgänglig med Scribe for Meetings?
 
 Scribe for Meetings kan göra dina skärmdelade bilder tillgängliga oavsett vilken app du använder för att presentera dem, så länge du kan tillhandahålla ditt bildspel i PowerPoint-format. Andra presentationsappar som Keynote och Google Slides kan konvertera sina bildspel till PowerPoint-format, så du kan använda dessa med Scribe for Meetings.
 
-## Scribe for Meetings visar inte de tillgängliga versionerna av mina bilder under presentationen, eller så hoppar den över vissa bilder. Vad är det som är fel?
+### Scribe for Meetings visar inte de tillgängliga versionerna av mina bilder under presentationen, eller så hoppar den över vissa bilder. Vad är det som är fel?
 
 Se till att du presenterar dina bilder i ett bildspel i helskärm och att du har konfigurerat Zoom eller Microsoft Teams skärmdelning för att dela bildspelet med din publik. Om du använder PowerPoint för Windows för att köra din presentation, se till att du trycker på F5 för att öppna bildspelsläget när du har öppnat PowerPoint.
 [Läs mer om hur du använder Zoom skärmdelning med PowerPoint](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
 [Läs mer om hur du använder Microsoft Teams skärmdelning med PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
 
-## Hur hanterar Scribe for Meetings bilder och grafik i mina bilder?
+### Hur hanterar Scribe for Meetings bilder och grafik i mina bilder?
 
 Om du redan har skrivit beskrivningar (även kända som alt-taggar eller bildtexter) för det grafiska innehållet i dina bilder, kommer Scribe for Meetings att använda dessa. Annars kommer Scribe for Meetings att använda en molnbaserad bildbeskrivningstjänst som drivs av maskininlärning för att automatiskt lägga till alt-taggar för dina bilder. Om bilderna innehåller text kommer Scribe for Meetings även att använda optisk teckenigenkänning (OCR) för att göra texten tillgänglig.
 
-## Mina bilder innehåller diagram, tabeller eller annan komplex grafik. Kan Scribe for Meetings hantera dem?
+### Mina bilder innehåller diagram, tabeller eller annan komplex grafik. Kan Scribe for Meetings hantera dem?
 
 Det korta svaret är, för det mesta inte. Vi arbetar fortfarande på detta. Eftersom Scribe Augmented Document Remediation-plattformen drivs av maskininlärning kommer vi, när vi får in fler dokument och bildspel med komplex grafik, att kunna träna vår modell för att göra denna grafik tillgänglig. Men än så länge får du helt enkelt prova dig fram.
 
-## Fungerar Scribe for Meetings med andra mötesplattformar än Zoom och Microsoft Teams, som Jitsi Meet, Google Meet, Slack, Amazon Chime eller BlueJeans?
+### Fungerar Scribe for Meetings med andra mötesplattformar än Zoom och Microsoft Teams, som Jitsi Meet, Google Meet, Slack, Amazon Chime eller BlueJeans?
 
 Inte ännu, men det kommer snart.
 
-## Hur loggar personer inom vår organisation in på Scribe for Meetings?
+### Hur loggar personer inom vår organisation in på Scribe for Meetings?
 
 Scribe for Meetings stöder för närvarande två alternativ för autentisering. Det enklaste alternativet är vår e-postbaserade inloggningsprocess. Ange bara din e-postadress så skickar vi en länk som du kan använda för att logga in; inget lösenord behövs. För organisationer med strängare säkerhetskrav kan vi även integrera med SSO-system (single sign-on) som implementerar SAML-standarden, antingen via [InCommon](https://www.incommon.org/) federationen eller med hjälp av bilateralt utbyte av metadata. Vår SAML-tjänsteleverantör använder Shibboleth SP-paketet med öppen källkod och implementerades i samarbete med [Signet, Inc.,](https://www.signet.id/), ett företag inom identitetshantering och åtkomstkontroll som grundades av en av Shibboleths arkitekter. Observera att vi stöder SSO via en mängd olika identitetsleverantörer; förutom Shibboleth IdP har vi testat med Azure Active Directory. När din organisation registrerar sig med Scribe for Meetings erbjuder vi SSO-onboarding, som täcks av installationsavgiften.
 
-## Vad är framtiden för Scribe for Meetings?
+### Vad är framtiden för Scribe for Meetings?
 
 Scribe, plattformen bakom våra Scribe-produkter, lär sig aktivt varje gång ett dokument bearbetas. Den maskininlärningsdrivna Augmented Document Remediation-tekniken blir smartare för varje sida och tar oss så mycket närmare 100% noggrannhet. Fördelarna sprider sig till alla våra produkter, vilket gör Scribe for Meetings till en applikation som bara blir bättre ju mer du använder den.
