--- a/src/content/docs/sv/gettingconnected.mdx
+++ b/src/content/docs/sv/gettingconnected.mdx
@@ -7,7 +7,7 @@ import MacOS from "~/components/platform/MacOS.astro"
 
 Scribe for Meetings erbjuder två snabba, smärtfria sätt att ansluta till din tillgängliga bildpresentation.
 
-## Ansluta via direktlänk
+### Ansluta via direktlänk
 
 I likhet med en möteslänk från din telekonferensplattform erbjuder Scribe for Meetings direktlänkar för att ansluta till ditt tillgängliga bildspel. Om du får en länk i din mötesinbjudan eller i möteschatten kan du klicka på den för att direkt öppna Scribe for Meetings i din webbläsare. När du klickar på knappen "Starta" kan en av två saker hända.
 1. Du kommer att höra en kort ljudsignal, följt av ett meddelande som informerar dig om att Scribe för möten förbereder sig för att ge tillgång till innehållet i detta möte.
@@ -19,7 +19,7 @@ I likhet med en möteslänk från din telekonferensplattform erbjuder Scribe for
 
 I vilket fall som helst är Scribe for Meetings nu redo att börja presentera bilderna.
 
-## Anslutning via möteslänk
+### Anslutning via möteslänk
 
 Om du av någon anledning inte har den direkta länken kan du fortfarande försöka gå med via en direkt Zoom- eller Teams-länk. För att gå med via standardmöteslänken:
 1. Besök Scribe for Meetings.
